--- a/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_inclusion_plot.tex
+++ b/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_inclusion_plot.tex
@@ -1,57 +1,57 @@
 \tikzpicture[gnuplot]
 %% generated with GNUPLOT 6.0p1 (Lua 5.2; terminal rev. Jun 2020, script rev. 118)
-%% Tue 17 Dec 2024 03:03:42 PM UTC
+%% tir 17 dec 2024 22:26:36 CET
 \path (0.000,0.000) rectangle (16.000,12.000);
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,1.661)--(15.447,1.661);
+\draw[gp path] (2.424,1.845)--(15.447,1.845);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,1.661)--(2.604,1.661);
-\draw[gp path] (15.447,1.661)--(15.267,1.661);
-\node[gp node right] at (2.240,1.661) {$1.92\times10^{11}$};
+\draw[gp path] (2.424,1.845)--(2.604,1.845);
+\draw[gp path] (15.447,1.845)--(15.267,1.845);
+\node[gp node right] at (2.240,1.845) {$1.95\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,3.230)--(15.447,3.230);
+\draw[gp path] (2.424,3.383)--(15.447,3.383);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,3.230)--(2.604,3.230);
-\draw[gp path] (15.447,3.230)--(15.267,3.230);
-\node[gp node right] at (2.240,3.230) {$1.93\times10^{11}$};
+\draw[gp path] (2.424,3.383)--(2.604,3.383);
+\draw[gp path] (15.447,3.383)--(15.267,3.383);
+\node[gp node right] at (2.240,3.383) {$1.96\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,4.799)--(15.447,4.799);
+\draw[gp path] (2.424,4.922)--(15.447,4.922);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,4.799)--(2.604,4.799);
-\draw[gp path] (15.447,4.799)--(15.267,4.799);
-\node[gp node right] at (2.240,4.799) {$1.94\times10^{11}$};
+\draw[gp path] (2.424,4.922)--(2.604,4.922);
+\draw[gp path] (15.447,4.922)--(15.267,4.922);
+\node[gp node right] at (2.240,4.922) {$1.97\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,6.368)--(15.447,6.368);
+\draw[gp path] (2.424,6.460)--(15.447,6.460);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,6.368)--(2.604,6.368);
-\draw[gp path] (15.447,6.368)--(15.267,6.368);
-\node[gp node right] at (2.240,6.368) {$1.95\times10^{11}$};
+\draw[gp path] (2.424,6.460)--(2.604,6.460);
+\draw[gp path] (15.447,6.460)--(15.267,6.460);
+\node[gp node right] at (2.240,6.460) {$1.98\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,7.937)--(15.447,7.937);
+\draw[gp path] (2.424,7.998)--(15.447,7.998);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,7.937)--(2.604,7.937);
-\draw[gp path] (15.447,7.937)--(15.267,7.937);
-\node[gp node right] at (2.240,7.937) {$1.96\times10^{11}$};
+\draw[gp path] (2.424,7.998)--(2.604,7.998);
+\draw[gp path] (15.447,7.998)--(15.267,7.998);
+\node[gp node right] at (2.240,7.998) {$1.99\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,9.506)--(15.447,9.506);
+\draw[gp path] (2.424,9.537)--(15.447,9.537);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,9.506)--(2.604,9.506);
-\draw[gp path] (15.447,9.506)--(15.267,9.506);
-\node[gp node right] at (2.240,9.506) {$1.97\times10^{11}$};
+\draw[gp path] (2.424,9.537)--(2.604,9.537);
+\draw[gp path] (15.447,9.537)--(15.267,9.537);
+\node[gp node right] at (2.240,9.537) {$2\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
 \draw[gp path] (2.424,11.075)--(15.447,11.075);
@@ -59,138 +59,175 @@
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,11.075)--(2.604,11.075);
 \draw[gp path] (15.447,11.075)--(15.267,11.075);
-\node[gp node right] at (2.240,11.075) {$1.98\times10^{11}$};
+\node[gp node right] at (2.240,11.075) {$2.01\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,1.661)--(2.424,11.075);
+\draw[gp path] (2.424,1.845)--(2.424,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,1.661)--(2.424,1.841);
+\draw[gp path] (2.424,1.845)--(2.424,2.025);
 \draw[gp path] (2.424,11.075)--(2.424,10.895);
-\node[gp node left,rotate=270] at (2.424,1.477) {$0$};
+\node[gp node left,rotate=270] at (2.424,1.661) {$0$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (3.726,1.661)--(3.726,11.075);
+\draw[gp path] (4.052,1.845)--(4.052,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (3.726,1.661)--(3.726,1.841);
-\draw[gp path] (3.726,11.075)--(3.726,10.895);
-\node[gp node left,rotate=270] at (3.726,1.477) {$2$};
+\draw[gp path] (4.052,1.845)--(4.052,2.025);
+\draw[gp path] (4.052,11.075)--(4.052,10.895);
+\node[gp node left,rotate=270] at (4.052,1.661) {$50$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (5.029,1.661)--(5.029,11.075);
+\draw[gp path] (5.680,1.845)--(5.680,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (5.029,1.661)--(5.029,1.841);
-\draw[gp path] (5.029,11.075)--(5.029,10.895);
-\node[gp node left,rotate=270] at (5.029,1.477) {$4$};
+\draw[gp path] (5.680,1.845)--(5.680,2.025);
+\draw[gp path] (5.680,11.075)--(5.680,10.895);
+\node[gp node left,rotate=270] at (5.680,1.661) {$100$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (6.331,1.661)--(6.331,11.075);
+\draw[gp path] (7.308,1.845)--(7.308,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (6.331,1.661)--(6.331,1.841);
-\draw[gp path] (6.331,11.075)--(6.331,10.895);
-\node[gp node left,rotate=270] at (6.331,1.477) {$6$};
+\draw[gp path] (7.308,1.845)--(7.308,2.025);
+\draw[gp path] (7.308,11.075)--(7.308,10.895);
+\node[gp node left,rotate=270] at (7.308,1.661) {$150$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (7.633,1.661)--(7.633,11.075);
+\draw[gp path] (8.936,1.845)--(8.936,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (7.633,1.661)--(7.633,1.841);
-\draw[gp path] (7.633,11.075)--(7.633,10.895);
-\node[gp node left,rotate=270] at (7.633,1.477) {$8$};
-\gpcolor{rgb color={0.753,0.753,0.753}}
-\gpsetlinewidth{2.00}
-\draw[gp path] (8.936,1.661)--(8.936,11.075);
-\gpcolor{color=gp lt color border}
-\gpsetlinewidth{1.00}
-\draw[gp path] (8.936,1.661)--(8.936,1.841);
+\draw[gp path] (8.936,1.845)--(8.936,2.025);
 \draw[gp path] (8.936,11.075)--(8.936,10.895);
-\node[gp node left,rotate=270] at (8.936,1.477) {$10$};
+\node[gp node left,rotate=270] at (8.936,1.661) {$200$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (10.238,1.661)--(10.238,11.075);
+\draw[gp path] (10.563,1.845)--(10.563,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (10.238,1.661)--(10.238,1.841);
-\draw[gp path] (10.238,11.075)--(10.238,10.895);
-\node[gp node left,rotate=270] at (10.238,1.477) {$12$};
+\draw[gp path] (10.563,1.845)--(10.563,2.025);
+\draw[gp path] (10.563,11.075)--(10.563,10.895);
+\node[gp node left,rotate=270] at (10.563,1.661) {$250$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (11.540,1.661)--(11.540,11.075);
+\draw[gp path] (12.191,1.845)--(12.191,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (11.540,1.661)--(11.540,1.841);
-\draw[gp path] (11.540,11.075)--(11.540,10.895);
-\node[gp node left,rotate=270] at (11.540,1.477) {$14$};
+\draw[gp path] (12.191,1.845)--(12.191,2.025);
+\draw[gp path] (12.191,11.075)--(12.191,10.895);
+\node[gp node left,rotate=270] at (12.191,1.661) {$300$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (12.842,1.661)--(12.842,11.075);
+\draw[gp path] (13.819,1.845)--(13.819,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (12.842,1.661)--(12.842,1.841);
-\draw[gp path] (12.842,11.075)--(12.842,10.895);
-\node[gp node left,rotate=270] at (12.842,1.477) {$16$};
+\draw[gp path] (13.819,1.845)--(13.819,2.025);
+\draw[gp path] (13.819,11.075)--(13.819,10.895);
+\node[gp node left,rotate=270] at (13.819,1.661) {$350$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (14.145,1.661)--(14.145,11.075);
+\draw[gp path] (15.447,1.845)--(15.447,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (14.145,1.661)--(14.145,1.841);
-\draw[gp path] (14.145,11.075)--(14.145,10.895);
-\node[gp node left,rotate=270] at (14.145,1.477) {$18$};
-\gpcolor{rgb color={0.753,0.753,0.753}}
-\gpsetlinewidth{2.00}
-\draw[gp path] (15.447,1.661)--(15.447,11.075);
-\gpcolor{color=gp lt color border}
-\gpsetlinewidth{1.00}
-\draw[gp path] (15.447,1.661)--(15.447,1.841);
+\draw[gp path] (15.447,1.845)--(15.447,2.025);
 \draw[gp path] (15.447,11.075)--(15.447,10.895);
-\node[gp node left,rotate=270] at (15.447,1.477) {$20$};
-\draw[gp path] (2.424,11.075)--(2.424,1.661)--(15.447,1.661)--(15.447,11.075)--cycle;
+\node[gp node left,rotate=270] at (15.447,1.661) {$400$};
+\draw[gp path] (2.424,11.075)--(2.424,1.845)--(15.447,1.845)--(15.447,11.075)--cycle;
 \gpcolor{rgb color={0.000,0.000,0.000}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,10.196)--(2.424,10.097)--(2.424,9.633)--(2.424,9.508)--(2.424,9.175)%
-  --(2.424,8.958)--(2.424,8.750)--(2.424,8.742)--(2.424,8.707)--(2.424,8.539)--(2.424,8.472)%
-  --(2.424,8.324)--(3.075,8.193)--(3.075,8.079)--(3.075,7.910)--(3.075,7.686)--(3.075,7.642)%
-  --(3.075,7.614)--(3.075,7.608)--(3.075,7.381)--(3.075,7.372)--(3.075,7.277)--(3.075,7.179)%
-  --(3.075,7.065)--(3.075,7.040)--(3.075,6.865)--(3.075,6.802)--(3.075,6.738)--(3.075,6.690)%
-  --(3.075,6.642)--(3.075,6.466)--(3.075,6.372)--(3.075,6.243)--(3.075,6.205)--(3.075,6.153)%
-  --(3.075,6.060)--(3.075,6.041)--(3.075,5.915)--(3.075,5.911)--(3.075,5.802)--(3.075,5.768)%
-  --(3.075,5.689)--(3.075,5.683)--(3.075,5.668)--(3.075,5.655)--(3.075,5.603)--(3.075,5.570)%
-  --(3.075,5.554)--(3.075,5.548)--(3.075,5.546)--(3.075,5.418)--(3.075,5.366)--(3.075,5.333)%
-  --(3.075,5.259)--(3.726,5.253)--(3.726,5.129)--(3.726,5.116)--(3.726,5.052)--(3.726,5.006)%
-  --(3.726,4.984)--(3.726,4.958)--(3.726,4.951)--(3.726,4.869)--(3.726,4.815)--(3.726,4.728)%
-  --(3.726,4.679)--(3.726,4.663)--(3.726,4.658)--(3.726,4.655)--(3.726,4.632)--(3.726,4.631)%
-  --(3.726,4.612)--(3.726,4.587)--(3.726,4.582)--(3.726,4.521)--(3.726,4.519)--(3.726,4.515)%
-  --(3.726,4.435)--(4.377,4.433)--(4.377,4.418)--(4.377,4.323)--(4.377,4.267)--(4.377,4.242)%
-  --(4.377,4.215)--(4.377,4.214)--(4.377,4.209)--(4.377,4.188)--(4.377,4.179)--(4.377,4.145)%
-  --(4.377,4.128)--(4.377,4.092)--(5.029,4.062)--(5.029,4.061)--(5.029,4.033)--(5.029,4.025)%
-  --(5.029,3.979)--(5.029,3.975)--(5.029,3.944)--(5.029,3.935)--(5.029,3.682)--(5.029,3.650)%
-  --(5.029,3.614)--(5.029,3.603)--(5.029,3.586)--(5.029,3.568)--(5.680,3.563)--(5.680,3.531)%
-  --(5.680,3.517)--(5.680,3.512)--(5.680,3.498)--(5.680,3.475)--(5.680,3.458)--(5.680,3.454)%
-  --(5.680,3.442)--(5.680,3.403)--(5.680,3.389)--(5.680,3.378)--(5.680,3.355)--(5.680,3.332)%
-  --(6.331,3.302)--(6.331,3.296)--(6.331,3.295)--(6.331,3.248)--(6.331,3.210)--(6.331,3.205)%
-  --(6.331,3.193)--(6.331,3.176)--(6.331,3.170)--(6.331,3.136)--(6.982,3.134)--(6.982,3.104)%
-  --(6.982,3.093)--(6.982,3.087)--(6.982,3.072)--(6.982,3.051)--(6.982,3.050)--(6.982,3.034)%
-  --(7.633,3.032)--(7.633,3.002)--(7.633,2.988)--(7.633,2.979)--(7.633,2.951)--(8.284,2.915)%
-  --(8.284,2.912)--(8.284,2.906)--(8.284,2.779)--(8.284,2.764)--(8.284,2.737)--(8.284,2.735)%
-  --(8.284,2.728)--(8.284,2.705)--(8.284,2.686)--(8.936,2.608)--(8.936,2.593)--(8.936,2.584)%
-  --(8.936,2.576)--(8.936,2.542)--(8.936,2.529)--(8.936,2.525)--(9.587,2.518)--(9.587,2.496)%
-  --(9.587,2.487)--(9.587,2.474)--(9.587,2.450)--(9.587,2.444)--(9.587,2.425)--(10.238,2.414)%
-  --(10.238,2.406)--(10.238,2.382)--(10.238,2.355)--(10.889,2.337)--(10.889,2.311)--(10.889,2.303)%
-  --(10.889,2.301)--(11.540,2.294)--(11.540,2.289)--(11.540,2.273)--(11.540,2.244)--(12.191,2.242)%
-  --(12.191,2.225)--(12.191,2.219)--(12.191,2.203)--(12.191,2.193)--(12.842,2.181)--(12.842,2.178)%
-  --(13.494,2.148)--(13.494,2.128)--(13.494,2.106)--(13.494,2.094)--(14.145,2.092)--(14.145,2.076)%
-  --(14.145,2.064)--(14.796,2.052)--(14.796,2.043);
+\draw[gp path] (2.424,10.924)--(2.424,10.659)--(2.424,10.524)--(2.457,10.497)--(2.457,10.276)%
+  --(2.457,10.135)--(2.457,9.998)--(2.457,9.939)--(2.457,9.871)--(2.457,9.749)--(2.457,9.724)%
+  --(2.457,9.630)--(2.457,9.611)--(2.457,9.372)--(2.457,9.147)--(2.457,8.896)--(2.489,8.808)%
+  --(2.489,8.738)--(2.489,8.718)--(2.489,8.669)--(2.489,8.584)--(2.489,8.468)--(2.489,8.434)%
+  --(2.489,8.309)--(2.489,8.202)--(2.489,8.105)--(2.489,8.087)--(2.522,7.860)--(2.522,7.759)%
+  --(2.522,7.669)--(2.522,7.650)--(2.522,7.519)--(2.522,7.502)--(2.522,7.404)--(2.522,7.371)%
+  --(2.522,7.332)--(2.522,7.304)--(2.554,7.200)--(2.554,7.121)--(2.554,7.098)--(2.554,7.068)%
+  --(2.554,6.667)--(2.554,6.642)--(2.554,6.546)--(2.554,6.486)--(2.554,6.476)--(2.554,6.469)%
+  --(2.554,6.445)--(2.587,6.282)--(2.587,6.253)--(2.587,6.241)--(2.587,6.209)--(2.587,6.202)%
+  --(2.587,6.092)--(2.587,6.089)--(2.587,6.074)--(2.619,5.985)--(2.619,5.834)--(2.619,5.820)%
+  --(2.619,5.811)--(2.619,5.772)--(2.619,5.740)--(2.619,5.732)--(2.619,5.642)--(2.652,5.621)%
+  --(2.652,5.598)--(2.652,5.563)--(2.652,5.520)--(2.652,5.491)--(2.652,5.471)--(2.652,5.427)%
+  --(2.684,5.397)--(2.684,5.342)--(2.684,5.299)--(2.684,5.272)--(2.684,5.258)--(2.684,5.240)%
+  --(2.717,5.192)--(2.717,5.187)--(2.717,5.170)--(2.717,5.149)--(2.717,5.105)--(2.717,5.096)%
+  --(2.750,5.071)--(2.750,5.048)--(2.750,5.024)--(2.750,4.986)--(2.750,4.684)--(2.750,4.682)%
+  --(2.750,4.634)--(2.782,4.618)--(2.782,4.574)--(2.782,4.559)--(2.815,4.534)--(2.815,4.522)%
+  --(2.815,4.490)--(2.815,4.469)--(2.847,4.435)--(2.847,4.399)--(2.847,4.345)--(2.847,4.344)%
+  --(2.847,4.318)--(2.847,4.301)--(2.880,4.261)--(2.880,4.237)--(2.880,4.213)--(2.912,4.204)%
+  --(2.912,4.190)--(2.912,4.186)--(2.912,4.179)--(2.912,4.164)--(2.912,4.139)--(2.945,4.134)%
+  --(2.945,4.114)--(2.945,4.101)--(2.945,4.086)--(2.977,4.002)--(2.977,3.986)--(2.977,3.977)%
+  --(2.977,3.975)--(2.977,3.945)--(3.010,3.940)--(3.010,3.932)--(3.043,3.927)--(3.043,3.926)%
+  --(3.043,3.921)--(3.043,3.908)--(3.043,3.904)--(3.075,3.903)--(3.075,3.897)--(3.075,3.891)%
+  --(3.108,3.869)--(3.108,3.843)--(3.108,3.831)--(3.140,3.816)--(3.173,3.814)--(3.173,3.800)%
+  --(3.205,3.783)--(3.205,3.774)--(3.238,3.768)--(3.238,3.756)--(3.238,3.749)--(3.238,3.743)%
+  --(3.238,3.727)--(3.270,3.718)--(3.303,3.666)--(3.303,3.654)--(3.336,3.616)--(3.336,3.610)%
+  --(3.401,3.607)--(3.401,3.601)--(3.433,3.594)--(3.433,3.584)--(3.433,3.576)--(3.531,3.569)%
+  --(3.629,3.548)--(3.661,3.537)--(3.661,3.532)--(3.694,3.525)--(3.759,3.511)--(3.824,3.506)%
+  --(3.857,3.489)--(3.857,3.488)--(3.857,3.460)--(3.922,3.460)--(3.922,3.451)--(4.019,3.451)%
+  --(4.084,3.432)--(4.150,3.417)--(4.215,3.410)--(4.247,3.395)--(4.280,3.389)--(4.280,3.376)%
+  --(4.280,3.370)--(4.345,3.360)--(4.410,3.359)--(4.443,3.167)--(4.443,3.160)--(4.443,3.137)%
+  --(4.443,3.109)--(4.475,3.108)--(4.475,3.009)--(4.475,2.985)--(4.508,2.978)--(4.508,2.967)%
+  --(4.508,2.966)--(4.540,2.964)--(4.540,2.947)--(4.573,2.942)--(4.573,2.937)--(4.573,2.934)%
+  --(4.605,2.911)--(4.605,2.908)--(4.605,2.893)--(4.605,2.878)--(4.638,2.865)--(4.638,2.864)%
+  --(4.638,2.842)--(4.670,2.835)--(4.670,2.832)--(4.670,2.827)--(4.703,2.821)--(4.703,2.802)%
+  --(4.736,2.788)--(4.736,2.786)--(4.768,2.755)--(4.801,2.754)--(4.801,2.721)--(4.801,2.715)%
+  --(4.833,2.702)--(4.866,2.688)--(4.898,2.674)--(4.931,2.671)--(4.963,2.663)--(4.963,2.657)%
+  --(5.159,2.657)--(5.159,2.618)--(5.159,2.616)--(5.191,2.615)--(5.191,2.599)--(5.224,2.578)%
+  --(5.289,2.576)--(5.322,2.576)--(5.354,2.572)--(5.387,2.569)--(5.387,2.550)--(5.452,2.541)%
+  --(5.484,2.535)--(5.484,2.488)--(5.550,2.475)--(5.582,2.472)--(5.582,2.463)--(5.680,2.454)%
+  --(5.843,2.441)--(5.875,2.439)--(5.940,2.439)--(6.005,2.438)--(6.103,2.437)--(6.136,2.434)%
+  --(6.233,2.434)--(6.266,2.429)--(6.396,2.429)--(6.396,3.294)--(6.396,3.238)--(6.396,3.130)%
+  --(6.396,3.124)--(6.429,3.100)--(6.429,3.087)--(6.429,3.074)--(6.429,3.070)--(6.429,3.042)%
+  --(6.461,3.042)--(6.461,2.994)--(6.461,2.982)--(6.494,2.960)--(6.494,2.936)--(6.526,2.917)%
+  --(6.559,2.886)--(6.559,2.882)--(6.591,2.878)--(6.591,2.877)--(6.591,2.864)--(6.591,2.855)%
+  --(6.591,2.850)--(6.591,2.848)--(6.624,2.844)--(6.624,2.833)--(6.624,2.799)--(6.656,2.791)%
+  --(6.722,2.772)--(6.754,2.768)--(6.787,2.758)--(6.819,2.758)--(6.819,2.745)--(6.884,2.720)%
+  --(6.917,2.717)--(6.917,2.713)--(6.949,2.701)--(6.982,2.696)--(6.982,2.688)--(7.015,2.683)%
+  --(7.080,2.675)--(7.145,2.663)--(7.275,2.656)--(7.470,2.649)--(7.503,2.633)--(7.568,2.619)%
+  --(7.763,2.619)--(7.763,2.618)--(7.796,2.592)--(7.796,2.590)--(7.959,2.589)--(7.959,2.581)%
+  --(7.959,2.579)--(7.991,2.578)--(7.991,2.568)--(8.024,2.562)--(8.089,2.560)--(8.154,2.552)%
+  --(8.187,2.551)--(8.219,2.547)--(8.219,2.546)--(8.219,2.545)--(8.219,2.541)--(8.284,2.525)%
+  --(8.284,2.521)--(8.317,2.511)--(8.349,2.511)--(8.349,3.381)--(8.349,3.360)--(8.382,3.349)%
+  --(8.382,3.338)--(8.382,3.321)--(8.382,3.317)--(8.415,3.312)--(8.415,3.309)--(8.415,3.288)%
+  --(8.415,3.252)--(8.415,3.231)--(8.415,3.210)--(8.447,3.208)--(8.447,3.202)--(8.512,3.200)%
+  --(8.545,3.195)--(8.545,3.184)--(8.545,3.173)--(8.577,3.158)--(8.577,3.153)--(8.610,3.146)%
+  --(8.675,3.138)--(8.675,3.129)--(8.708,3.110)--(8.773,3.079)--(8.805,3.076)--(8.805,3.073)%
+  --(8.805,3.060)--(8.838,3.027)--(8.870,3.024)--(8.936,3.016)--(8.968,3.007)--(8.968,3.005)%
+  --(9.001,3.000)--(9.001,2.995)--(9.066,2.983)--(9.196,2.963)--(9.229,2.960)--(9.326,2.946)%
+  --(9.424,2.942)--(9.489,2.933)--(9.489,2.919)--(9.749,2.912)--(10.140,2.903)--(10.303,2.903)%
+  --(10.303,3.607)--(10.303,3.541)--(10.303,3.479)--(10.303,3.459)--(10.303,3.442)--(10.303,3.388)%
+  --(10.303,3.322)--(10.335,3.290)--(10.335,3.273)--(10.335,3.272)--(10.335,3.258)--(10.368,3.236)%
+  --(10.433,3.194)--(10.433,3.191)--(10.433,3.189)--(10.433,3.185)--(10.466,3.176)--(10.498,3.168)%
+  --(10.498,3.087)--(10.531,3.055)--(10.531,3.040)--(10.531,3.001)--(10.531,2.987)--(10.563,2.973)%
+  --(10.596,2.970)--(10.628,2.952)--(10.628,2.935)--(10.628,2.927)--(10.628,2.903)--(10.628,2.895)%
+  --(10.661,2.890)--(10.661,2.888)--(10.694,2.859)--(10.694,2.851)--(10.726,2.826)--(10.726,2.816)%
+  --(10.791,2.773)--(10.824,2.768)--(10.856,2.761)--(10.922,2.754)--(10.954,2.750)--(11.052,2.744)%
+  --(11.084,2.740)--(11.084,2.738)--(11.084,2.736)--(11.149,2.729)--(11.149,2.728)--(11.149,2.717)%
+  --(11.182,2.716)--(11.215,2.712)--(11.247,2.703)--(11.247,2.682)--(11.247,2.667)--(11.247,2.666)%
+  --(11.345,2.657)--(11.345,2.655)--(11.377,2.651)--(11.410,2.644)--(11.442,2.643)--(11.442,2.626)%
+  --(11.442,2.624)--(11.508,2.622)--(11.540,2.617)--(11.540,2.614)--(11.573,2.610)--(11.605,2.596)%
+  --(11.638,2.593)--(11.670,2.590)--(11.801,2.584)--(11.833,2.581)--(11.898,2.573)--(11.931,2.569)%
+  --(11.963,2.567)--(12.028,2.563)--(12.028,2.558)--(12.061,2.555)--(12.094,2.551)--(12.159,2.538)%
+  --(12.191,2.534)--(12.256,2.534)--(12.256,3.591)--(12.256,3.498)--(12.256,3.492)--(12.256,3.465)%
+  --(12.256,3.440)--(12.289,3.437)--(12.289,3.428)--(12.289,3.399)--(12.289,3.393)--(12.321,3.383)%
+  --(12.321,3.373)--(12.321,3.351)--(12.321,3.340)--(12.354,3.325)--(12.354,3.311)--(12.354,3.240)%
+  --(12.387,3.230)--(12.387,3.223)--(12.387,3.206)--(12.387,3.199)--(12.387,3.194)--(12.419,3.190)%
+  --(12.419,3.155)--(12.419,3.121)--(12.419,3.116)--(12.419,3.110)--(12.452,3.096)--(12.452,3.082)%
+  --(12.484,3.075)--(12.549,3.051)--(12.582,3.042)--(12.582,3.039)--(12.582,3.019)--(12.647,3.003)%
+  --(12.647,2.986)--(12.680,2.982)--(12.712,2.982)--(12.745,2.968)--(12.777,2.952)--(12.810,2.950)%
+  --(12.810,2.943)--(12.810,2.937)--(12.842,2.924)--(12.875,2.917)--(12.908,2.914)--(13.005,2.914)%
+  --(13.103,2.907)--(13.103,2.906)--(13.103,2.900)--(13.135,2.886)--(13.135,2.872)--(13.168,2.869)%
+  --(13.201,2.866)--(13.201,2.854)--(13.233,2.845)--(13.298,2.845)--(13.298,2.837)--(13.298,2.827)%
+  --(13.331,2.826)--(13.363,2.825)--(13.396,2.815)--(13.396,2.810)--(13.494,2.804)--(13.494,2.789)%
+  --(13.526,2.782)--(13.689,2.779)--(13.721,2.775)--(13.754,2.755)--(13.787,2.741)--(13.787,2.737)%
+  --(13.852,2.735)--(13.884,2.735)--(13.884,2.734)--(13.917,2.727)--(13.949,2.716)--(13.982,2.716)%
+  --(14.177,2.701);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,11.075)--(2.424,1.661)--(15.447,1.661)--(15.447,11.075)--cycle;
-\node[gp node center,rotate=-270] at (-0.812,6.368) {Objective value};
+\draw[gp path] (2.424,11.075)--(2.424,1.845)--(15.447,1.845)--(15.447,11.075)--cycle;
+\node[gp node center,rotate=-270] at (-0.812,6.460) {Objective value};
 \node[gp node center] at (8.935,0.215) {Relative time ($\tau$) [S]};
 \node[gp node center] at (8.935,11.537) {Objective value for Weekly Schedule};
 %% coordinates of the plot area
-\gpdefrectangularnode{gp plot 1}{\pgfpoint{2.424cm}{1.661cm}}{\pgfpoint{15.447cm}{11.075cm}}
+\gpdefrectangularnode{gp plot 1}{\pgfpoint{2.424cm}{1.845cm}}{\pgfpoint{15.447cm}{11.075cm}}
 \endtikzpicture
 %% gnuplot variables
