--- a/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_exclusion_plot.tex
+++ b/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_exclusion_plot.tex
@@ -1,231 +1,173 @@
 \tikzpicture[gnuplot]
 %% generated with GNUPLOT 6.0p1 (Lua 5.2; terminal rev. Jun 2020, script rev. 118)
-%% Tue 17 Dec 2024 01:52:29 PM UTC
+%% tir 17 dec 2024 22:32:59 CET
 \path (0.000,0.000) rectangle (16.000,12.000);
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (2.424,1.845)--(15.447,1.845);
-\gpcolor{color=gp lt color border}
+\gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
+\gpsetlinewidth{2.00}
+\draw[gp path] (2.424,1.845)--(15.447,1.845);
+\gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,1.845)--(2.604,1.845);
 \draw[gp path] (15.447,1.845)--(15.267,1.845);
 \node[gp node right] at (2.240,1.845) {$1.91\times10^{11}$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (2.424,2.871)--(15.447,2.871);
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (2.424,2.684)--(15.447,2.684);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,2.871)--(2.604,2.871);
-\draw[gp path] (15.447,2.871)--(15.267,2.871);
-\node[gp node right] at (2.240,2.871) {$1.92\times10^{11}$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (2.424,3.896)--(15.447,3.896);
+\draw[gp path] (2.424,2.684)--(2.604,2.684);
+\draw[gp path] (15.447,2.684)--(15.267,2.684);
+\node[gp node right] at (2.240,2.684) {$1.92\times10^{11}$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (2.424,3.523)--(15.447,3.523);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,3.896)--(2.604,3.896);
-\draw[gp path] (15.447,3.896)--(15.267,3.896);
-\node[gp node right] at (2.240,3.896) {$1.93\times10^{11}$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (2.424,4.922)--(15.447,4.922);
+\draw[gp path] (2.424,3.523)--(2.604,3.523);
+\draw[gp path] (15.447,3.523)--(15.267,3.523);
+\node[gp node right] at (2.240,3.523) {$1.93\times10^{11}$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (2.424,4.362)--(15.447,4.362);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,4.922)--(2.604,4.922);
-\draw[gp path] (15.447,4.922)--(15.267,4.922);
-\node[gp node right] at (2.240,4.922) {$1.94\times10^{11}$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (2.424,5.947)--(15.447,5.947);
+\draw[gp path] (2.424,4.362)--(2.604,4.362);
+\draw[gp path] (15.447,4.362)--(15.267,4.362);
+\node[gp node right] at (2.240,4.362) {$1.94\times10^{11}$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (2.424,5.201)--(15.447,5.201);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,5.947)--(2.604,5.947);
-\draw[gp path] (15.447,5.947)--(15.267,5.947);
-\node[gp node right] at (2.240,5.947) {$1.95\times10^{11}$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (2.424,6.973)--(15.447,6.973);
+\draw[gp path] (2.424,5.201)--(2.604,5.201);
+\draw[gp path] (15.447,5.201)--(15.267,5.201);
+\node[gp node right] at (2.240,5.201) {$1.95\times10^{11}$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (2.424,6.040)--(15.447,6.040);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,6.973)--(2.604,6.973);
-\draw[gp path] (15.447,6.973)--(15.267,6.973);
-\node[gp node right] at (2.240,6.973) {$1.96\times10^{11}$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (2.424,7.998)--(15.447,7.998);
+\draw[gp path] (2.424,6.040)--(2.604,6.040);
+\draw[gp path] (15.447,6.040)--(15.267,6.040);
+\node[gp node right] at (2.240,6.040) {$1.96\times10^{11}$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (2.424,6.880)--(15.447,6.880);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,7.998)--(2.604,7.998);
-\draw[gp path] (15.447,7.998)--(15.267,7.998);
-\node[gp node right] at (2.240,7.998) {$1.97\times10^{11}$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (2.424,9.024)--(15.447,9.024);
+\draw[gp path] (2.424,6.880)--(2.604,6.880);
+\draw[gp path] (15.447,6.880)--(15.267,6.880);
+\node[gp node right] at (2.240,6.880) {$1.97\times10^{11}$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (2.424,7.719)--(15.447,7.719);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,9.024)--(2.604,9.024);
-\draw[gp path] (15.447,9.024)--(15.267,9.024);
-\node[gp node right] at (2.240,9.024) {$1.98\times10^{11}$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (2.424,10.049)--(15.447,10.049);
+\draw[gp path] (2.424,7.719)--(2.604,7.719);
+\draw[gp path] (15.447,7.719)--(15.267,7.719);
+\node[gp node right] at (2.240,7.719) {$1.98\times10^{11}$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (2.424,8.558)--(15.447,8.558);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,10.049)--(2.604,10.049);
-\draw[gp path] (15.447,10.049)--(15.267,10.049);
-\node[gp node right] at (2.240,10.049) {$1.99\times10^{11}$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
+\draw[gp path] (2.424,8.558)--(2.604,8.558);
+\draw[gp path] (15.447,8.558)--(15.267,8.558);
+\node[gp node right] at (2.240,8.558) {$1.99\times10^{11}$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (2.424,9.397)--(15.447,9.397);
+\gpcolor{color=gp lt color border}
+\gpsetlinewidth{1.00}
+\draw[gp path] (2.424,9.397)--(2.604,9.397);
+\draw[gp path] (15.447,9.397)--(15.267,9.397);
+\node[gp node right] at (2.240,9.397) {$2\times10^{11}$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (2.424,10.236)--(15.447,10.236);
+\gpcolor{color=gp lt color border}
+\gpsetlinewidth{1.00}
+\draw[gp path] (2.424,10.236)--(2.604,10.236);
+\draw[gp path] (15.447,10.236)--(15.267,10.236);
+\node[gp node right] at (2.240,10.236) {$2.01\times10^{11}$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
 \draw[gp path] (2.424,11.075)--(15.447,11.075);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,11.075)--(2.604,11.075);
 \draw[gp path] (15.447,11.075)--(15.267,11.075);
-\node[gp node right] at (2.240,11.075) {$2\times10^{11}$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
+\node[gp node right] at (2.240,11.075) {$2.02\times10^{11}$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
 \draw[gp path] (2.424,1.845)--(2.424,11.075);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,1.845)--(2.424,2.025);
 \draw[gp path] (2.424,11.075)--(2.424,10.895);
 \node[gp node left,rotate=270] at (2.424,1.661) {$0$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
 \draw[gp path] (4.052,1.845)--(4.052,11.075);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
 \draw[gp path] (4.052,1.845)--(4.052,2.025);
 \draw[gp path] (4.052,11.075)--(4.052,10.895);
 \node[gp node left,rotate=270] at (4.052,1.661) {$50$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
 \draw[gp path] (5.680,1.845)--(5.680,11.075);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
 \draw[gp path] (5.680,1.845)--(5.680,2.025);
 \draw[gp path] (5.680,11.075)--(5.680,10.895);
 \node[gp node left,rotate=270] at (5.680,1.661) {$100$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
 \draw[gp path] (7.308,1.845)--(7.308,11.075);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
 \draw[gp path] (7.308,1.845)--(7.308,2.025);
 \draw[gp path] (7.308,11.075)--(7.308,10.895);
 \node[gp node left,rotate=270] at (7.308,1.661) {$150$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
 \draw[gp path] (8.936,1.845)--(8.936,11.075);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
 \draw[gp path] (8.936,1.845)--(8.936,2.025);
 \draw[gp path] (8.936,11.075)--(8.936,10.895);
 \node[gp node left,rotate=270] at (8.936,1.661) {$200$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
 \draw[gp path] (10.563,1.845)--(10.563,11.075);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
 \draw[gp path] (10.563,1.845)--(10.563,2.025);
 \draw[gp path] (10.563,11.075)--(10.563,10.895);
 \node[gp node left,rotate=270] at (10.563,1.661) {$250$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
 \draw[gp path] (12.191,1.845)--(12.191,11.075);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
 \draw[gp path] (12.191,1.845)--(12.191,2.025);
 \draw[gp path] (12.191,11.075)--(12.191,10.895);
 \node[gp node left,rotate=270] at (12.191,1.661) {$300$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
 \draw[gp path] (13.819,1.845)--(13.819,11.075);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
 \draw[gp path] (13.819,1.845)--(13.819,2.025);
 \draw[gp path] (13.819,11.075)--(13.819,10.895);
 \node[gp node left,rotate=270] at (13.819,1.661) {$350$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
 \draw[gp path] (15.447,1.845)--(15.447,11.075);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
 \draw[gp path] (15.447,1.845)--(15.447,2.025);
 \draw[gp path] (15.447,11.075)--(15.447,10.895);
@@ -233,106 +175,126 @@
 \draw[gp path] (2.424,11.075)--(2.424,1.845)--(15.447,1.845)--(15.447,11.075)--cycle;
 \gpcolor{rgb color={0.000,0.000,0.000}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,8.376)--(2.424,8.282)--(2.424,8.114)--(2.457,8.061)--(2.457,7.927)%
-  --(2.457,7.899)--(2.457,7.877)--(2.489,7.655)--(2.489,7.640)--(2.489,7.551)--(2.489,7.494)%
-  --(2.489,7.409)--(2.522,7.385)--(2.522,7.304)--(2.522,7.272)--(2.522,7.231)--(2.554,7.174)%
-  --(2.554,7.141)--(2.554,7.057)--(2.554,7.042)--(2.587,6.979)--(2.587,6.896)--(2.587,6.830)%
-  --(2.619,6.789)--(2.619,6.768)--(2.652,6.682)--(2.652,6.560)--(2.652,6.411)--(2.652,6.349)%
-  --(2.652,6.166)--(2.684,6.097)--(2.684,6.034)--(2.684,5.852)--(2.717,5.776)--(2.717,5.737)%
-  --(2.750,5.709)--(2.750,5.630)--(2.750,5.442)--(2.750,5.435)--(2.782,5.310)--(2.782,5.289)%
-  --(2.782,5.244)--(2.782,5.242)--(2.815,5.232)--(2.815,5.205)--(2.815,5.183)--(2.815,5.136)%
-  --(2.847,5.081)--(2.847,5.066)--(2.847,4.941)--(2.847,4.908)--(2.880,4.888)--(2.880,4.859)%
-  --(2.880,4.851)--(2.880,4.830)--(2.912,4.812)--(2.912,4.808)--(2.912,4.801)--(2.945,4.766)%
-  --(2.945,4.750)--(2.945,4.719)--(2.945,4.695)--(2.945,4.652)--(2.977,4.609)--(2.977,4.575)%
-  --(2.977,4.569)--(2.977,4.492)--(3.010,4.485)--(3.010,4.469)--(3.043,4.430)--(3.043,4.390)%
-  --(3.043,4.384)--(3.043,4.367)--(3.075,4.350)--(3.108,4.307)--(3.140,4.282)--(3.140,4.279)%
-  --(3.173,4.253)--(3.173,4.248)--(3.173,4.222)--(3.173,4.042)--(3.205,3.978)--(3.205,3.911)%
-  --(3.205,3.888)--(3.238,3.871)--(3.270,3.867)--(3.368,3.830)--(3.368,3.820)--(3.401,3.812)%
-  --(3.401,3.787)--(3.433,3.783)--(3.433,3.771)--(3.466,3.766)--(3.466,3.714)--(3.466,3.699)%
-  --(3.531,3.664)--(3.531,3.655)--(3.531,3.654)--(3.564,3.637)--(3.596,3.624)--(3.596,3.616)%
-  --(3.629,4.424)--(3.661,4.324)--(3.661,4.251)--(3.661,4.226)--(3.661,4.181)--(3.694,4.139)%
-  --(3.694,4.104)--(3.694,3.994)--(3.694,3.995)--(3.694,3.970)--(3.694,3.931)--(3.726,3.901)%
-  --(3.726,3.898)--(3.726,3.839)--(3.726,3.821)--(3.726,3.800)--(3.726,3.747)--(3.759,3.710)%
-  --(3.759,3.700)--(3.759,3.614)--(3.759,3.610)--(3.759,3.622)--(3.791,3.609)--(3.791,3.595)%
-  --(3.824,3.582)--(3.824,3.591)--(3.824,3.574)--(3.824,3.557)--(3.824,3.543)--(3.857,3.503)%
-  --(3.857,3.450)--(3.889,3.434)--(3.889,3.456)--(3.889,3.419)--(3.922,3.456)--(3.922,3.440)%
-  --(3.922,3.437)--(3.922,3.419)--(3.954,3.444)--(3.954,3.435)--(3.954,3.507)--(3.954,3.495)%
-  --(3.987,3.488)--(3.987,3.454)--(3.987,3.435)--(3.987,3.424)--(4.019,3.468)--(4.019,3.462)%
-  --(4.019,3.433)--(4.019,3.420)--(4.052,3.418)--(4.052,3.419)--(4.084,3.429)--(4.084,3.427)%
-  --(4.084,3.412)--(4.084,3.386)--(4.084,3.377)--(4.117,3.344)--(4.117,3.339)--(4.150,3.335)%
-  --(4.150,3.310)--(4.150,3.338)--(4.150,3.329)--(4.182,3.322)--(4.182,3.326)--(4.215,3.322)%
-  --(4.215,9.677)--(4.215,5.020)--(4.215,4.886)--(4.215,4.546)--(4.215,4.487)--(4.247,4.437)%
-  --(4.247,4.292)--(4.247,4.261)--(4.247,4.114)--(4.280,4.093)--(4.280,4.009)--(4.280,3.917)%
-  --(4.280,3.894)--(4.280,3.825)--(4.312,3.824)--(4.312,3.764)--(4.312,3.672)--(4.312,3.613)%
-  --(4.345,3.585)--(4.345,3.518)--(4.377,3.503)--(4.377,3.435)--(4.377,3.427)--(4.377,3.409)%
-  --(4.410,3.328)--(4.410,3.320)--(4.410,3.287)--(4.410,3.117)--(4.443,3.106)--(4.443,3.074)%
-  --(4.443,3.063)--(4.475,3.088)--(4.475,3.084)--(4.475,3.036)--(4.508,2.996)--(4.508,2.988)%
-  --(4.540,2.976)--(4.540,2.971)--(4.540,2.970)--(4.540,2.963)--(4.573,2.935)--(4.573,2.809)%
-  --(4.573,2.800)--(4.605,2.780)--(4.605,2.748)--(4.605,2.709)--(4.605,2.669)--(4.638,2.666)%
-  --(4.638,2.637)--(4.670,2.628)--(4.670,2.624)--(4.703,2.618)--(4.736,2.613)--(4.736,2.612)%
-  --(4.736,2.597)--(4.736,2.584)--(4.768,2.564)--(4.768,2.557)--(4.768,2.482)--(4.801,2.481)%
-  --(4.801,2.471)--(4.833,2.429)--(4.866,2.414)--(4.866,2.408)--(4.866,2.375)--(4.866,2.356)%
-  --(4.898,2.275)--(4.931,2.259)--(4.931,2.255)--(4.963,2.237)--(4.963,2.230)--(4.996,2.216)%
-  --(4.996,2.213)--(5.029,2.205)--(5.094,2.233)--(5.094,2.243)--(5.126,2.241)--(5.126,2.253)%
-  --(5.159,2.247)--(5.191,2.246)--(5.191,2.238)--(5.191,2.237)--(5.224,2.250)--(5.257,2.250)%
-  --(5.289,2.268)--(5.289,2.262)--(5.289,2.261)--(5.322,2.269)--(5.322,2.267)--(5.354,2.266)%
-  --(5.387,2.261)--(5.387,2.251)--(5.484,2.245)--(5.517,2.240)--(5.517,2.238)--(5.517,2.229)%
-  --(5.550,2.226)--(5.550,2.223)--(5.582,2.221)--(5.615,2.221)--(5.647,2.218)--(5.745,2.215)%
-  --(5.745,2.213)--(5.777,2.210)--(5.810,2.207)--(5.908,2.383)--(5.908,2.417)--(5.940,2.416)%
-  --(6.005,2.409)--(6.070,2.399)--(6.070,2.397)--(6.168,2.397)--(6.168,7.537)--(6.168,4.099)%
-  --(6.168,4.076)--(6.201,3.973)--(6.201,3.939)--(6.201,3.811)--(6.233,3.787)--(6.233,3.736)%
-  --(6.233,3.725)--(6.233,3.484)--(6.266,3.469)--(6.266,3.381)--(6.266,3.352)--(6.266,3.318)%
-  --(6.298,3.300)--(6.298,3.287)--(6.298,3.270)--(6.298,3.235)--(6.298,3.209)--(6.331,3.190)%
-  --(6.331,3.175)--(6.331,2.775)--(6.331,2.772)--(6.363,2.730)--(6.363,2.679)--(6.363,2.662)%
-  --(6.396,2.650)--(6.396,2.630)--(6.429,2.608)--(6.429,2.587)--(6.429,2.551)--(6.429,2.515)%
-  --(6.461,2.482)--(6.494,2.458)--(6.494,2.448)--(6.526,2.430)--(6.526,2.419)--(6.526,2.377)%
-  --(6.559,2.374)--(6.591,2.366)--(6.591,2.358)--(6.591,2.351)--(6.624,2.346)--(6.656,2.345)%
-  --(6.656,2.334)--(6.656,2.333)--(6.689,2.323)--(6.722,2.323)--(6.819,2.315)--(6.819,2.301)%
-  --(6.917,2.299)--(6.982,2.298)--(6.982,2.293)--(6.982,2.289)--(7.015,2.279)--(7.015,2.278)%
-  --(7.047,2.263)--(7.047,2.239)--(7.080,2.235)--(7.112,2.218)--(7.145,2.216)--(7.177,2.210)%
-  --(7.210,2.201)--(7.243,2.201)--(7.275,2.200)--(7.308,2.193)--(7.373,2.192)--(7.405,2.183)%
-  --(7.405,2.175)--(7.405,2.170)--(7.470,2.162)--(7.503,2.160)--(7.568,2.156)--(7.698,2.151)%
-  --(7.731,2.146)--(7.829,2.145)--(7.926,2.143)--(7.926,2.138)--(7.926,2.133)--(7.991,2.132)%
-  --(8.024,2.125)--(8.122,7.210)--(8.122,5.151)--(8.154,4.967)--(8.154,4.953)--(8.154,4.940)%
-  --(8.154,4.930)--(8.187,4.870)--(8.187,4.791)--(8.219,4.765)--(8.219,4.747)--(8.219,4.660)%
-  --(8.219,4.647)--(8.252,4.602)--(8.252,4.580)--(8.252,4.572)--(8.284,4.550)--(8.284,4.408)%
-  --(8.284,4.384)--(8.284,4.381)--(8.317,4.244)--(8.317,4.169)--(8.317,4.167)--(8.317,4.108)%
-  --(8.349,4.083)--(8.349,4.066)--(8.382,4.051)--(8.382,3.851)--(8.382,3.847)--(8.382,3.820)%
-  --(8.382,3.857)--(8.415,3.848)--(8.415,3.838)--(8.415,3.829)--(8.415,3.818)--(8.447,3.811)%
-  --(8.447,3.810)--(8.480,3.808)--(8.577,3.850)--(8.577,3.846)--(8.577,3.836)--(8.610,3.830)%
-  --(8.675,3.738)--(8.675,3.711)--(8.675,3.670)--(8.708,3.654)--(8.708,3.647)--(8.740,3.646)%
-  --(8.740,3.632)--(8.773,3.637)--(8.773,3.617)--(8.805,3.611)--(8.936,3.609)--(8.936,3.608)%
-  --(8.968,3.601)--(9.098,3.611)--(9.098,3.589)--(9.131,3.580)--(9.131,3.572)--(9.163,3.567)%
-  --(9.163,3.563)--(9.163,3.559)--(9.196,3.557)--(9.261,3.556)--(9.261,3.561)--(9.294,3.557)%
-  --(9.294,3.554)--(9.326,3.553)--(9.326,3.545)--(9.359,3.542)--(9.359,3.540)--(9.424,3.534)%
-  --(9.456,3.534)--(9.456,3.529)--(9.489,3.521)--(9.652,3.539)--(9.684,3.538)--(9.782,3.534)%
-  --(9.815,3.530)--(9.847,3.528)--(9.847,3.526)--(9.847,3.523)--(10.042,3.518)--(10.042,3.515)%
-  --(10.075,8.407)--(10.108,7.323)--(10.108,7.176)--(10.108,7.169)--(10.108,7.115)--(10.108,7.097)%
-  --(10.140,6.920)--(10.140,6.698)--(10.140,6.646)--(10.173,6.608)--(10.205,6.603)--(10.205,6.581)%
-  --(10.205,6.573)--(10.238,6.547)--(10.270,6.513)--(10.270,6.494)--(10.303,6.466)--(10.303,6.451)%
-  --(10.303,6.444)--(10.303,6.423)--(10.303,6.417)--(10.335,6.401)--(10.335,6.396)--(10.368,6.378)%
-  --(10.368,6.367)--(10.368,6.365)--(10.401,6.351)--(10.433,6.329)--(10.433,6.322)--(10.466,6.311)%
-  --(10.466,6.304)--(10.498,6.286)--(10.498,6.269)--(10.498,6.264)--(10.531,6.255)--(10.563,6.245)%
-  --(10.563,6.238)--(10.596,6.171)--(10.628,6.164)--(10.661,6.163)--(10.694,6.158)--(10.726,6.151)%
-  --(10.726,6.145)--(10.726,6.139)--(10.759,6.134)--(10.791,6.116)--(10.791,6.091)--(10.791,6.089)%
-  --(10.791,6.081)--(10.824,6.071)--(10.824,6.031)--(10.824,6.028)--(10.856,6.023)--(10.856,6.009)%
-  --(10.889,5.986)--(10.922,5.982)--(10.987,5.976)--(11.019,5.971)--(11.019,5.950)--(11.052,5.950)%
-  --(11.117,5.949)--(11.117,5.945)--(11.149,5.939)--(11.149,5.934)--(11.182,5.931)--(11.182,5.925)%
-  --(11.215,5.919)--(11.215,5.918)--(11.247,5.912)--(11.280,5.912)--(11.312,5.911)--(11.345,5.903)%
-  --(11.345,5.898)--(11.377,5.891)--(11.442,5.888)--(11.442,5.887)--(11.508,5.881)--(11.540,5.878)%
-  --(11.638,5.875)--(11.703,5.871)--(11.768,5.885)--(11.833,5.877)--(11.866,5.872)--(11.866,5.870)%
-  --(11.931,5.864)--(11.963,5.921)--(12.028,9.851)--(12.061,10.963)--(12.094,10.936)--(12.094,10.928)%
-  --(12.094,10.857)--(12.126,10.820)--(12.126,10.692)--(12.126,10.588)--(12.191,10.524)--(12.224,10.521)%
-  --(12.224,10.517)--(12.256,10.516)--(12.256,10.499)--(12.289,10.490)--(12.289,10.488)--(12.321,10.486)%
-  --(12.321,10.472)--(12.354,10.468)--(12.354,10.457)--(12.354,10.454)--(12.387,10.444)--(12.387,10.441)%
-  --(12.452,10.421)--(12.452,10.364)--(12.484,10.364)--(12.484,10.361)--(12.517,10.346)--(12.549,10.342)%
-  --(12.549,10.337)--(12.582,10.336)--(12.614,10.329)--(12.680,10.354)--(12.680,10.347)--(12.712,10.343)%
-  --(12.712,10.336)--(12.745,10.320)--(12.745,10.319)--(12.777,10.307)--(12.777,10.306)--(12.810,10.300)%
-  --(12.810,10.293)--(12.842,10.290)--(12.875,10.284)--(12.908,10.278)--(12.908,10.272)--(12.973,10.274)%
-  --(13.005,10.256)--(13.038,10.247)--(13.038,10.245)--(13.038,10.244)--(13.070,10.226)--(13.103,10.217)%
-  --(13.135,10.216)--(13.168,10.214)--(13.233,10.213)--(13.266,10.210)--(13.331,10.204)--(13.331,10.197)%
-  --(13.331,10.195)--(13.396,10.187)--(13.396,10.183)--(13.526,10.177)--(13.526,10.173)--(13.689,10.197)%
-  --(13.754,10.191)--(13.852,10.189)--(13.852,10.184);
+\draw[gp path] (2.424,10.230)--(2.424,10.051)--(2.424,10.030)--(2.424,9.772)--(2.424,9.641)%
+  --(2.424,9.569)--(2.424,9.516)--(2.424,9.462)--(2.457,9.449)--(2.457,9.367)--(2.457,9.323)%
+  --(2.457,9.258)--(2.457,9.201)--(2.457,9.169)--(2.457,9.082)--(2.457,9.027)--(2.457,8.991)%
+  --(2.457,8.949)--(2.457,8.881)--(2.489,8.786)--(2.489,8.767)--(2.489,8.711)--(2.489,8.706)%
+  --(2.489,8.692)--(2.489,8.663)--(2.489,8.564)--(2.489,8.563)--(2.489,8.500)--(2.489,8.482)%
+  --(2.489,8.449)--(2.489,8.421)--(2.522,8.412)--(2.522,8.371)--(2.522,8.335)--(2.522,8.317)%
+  --(2.522,8.282)--(2.522,8.256)--(2.522,8.132)--(2.522,8.034)--(2.522,8.009)--(2.522,7.961)%
+  --(2.522,7.909)--(2.522,7.895)--(2.554,7.881)--(2.554,7.878)--(2.554,7.858)--(2.554,7.853)%
+  --(2.554,7.807)--(2.554,7.766)--(2.554,7.743)--(2.554,7.735)--(2.554,7.681)--(2.587,7.670)%
+  --(2.587,7.627)--(2.587,7.624)--(2.587,7.602)--(2.587,7.597)--(2.587,7.596)--(2.587,7.568)%
+  --(2.587,7.552)--(2.587,7.529)--(2.619,7.527)--(2.619,7.513)--(2.619,7.474)--(2.619,7.444)%
+  --(2.619,7.437)--(2.619,7.409)--(2.619,7.403)--(2.652,7.401)--(2.652,7.374)--(2.652,7.372)%
+  --(2.652,7.365)--(2.652,7.341)--(2.652,7.334)--(2.652,7.325)--(2.684,7.325)--(2.684,7.315)%
+  --(2.684,7.310)--(2.684,7.270)--(2.684,7.254)--(2.684,7.253)--(2.684,7.242)--(2.684,7.239)%
+  --(2.684,7.107)--(2.684,7.075)--(2.717,7.040)--(2.717,7.001)--(2.717,6.989)--(2.717,6.950)%
+  --(2.717,6.943)--(2.750,6.898)--(2.750,6.883)--(2.750,6.868)--(2.750,6.863)--(2.782,6.845)%
+  --(2.782,6.841)--(2.782,6.830)--(2.782,6.822)--(2.782,6.821)--(2.815,6.818)--(2.815,6.816)%
+  --(2.815,6.807)--(2.847,6.781)--(2.847,6.775)--(2.847,6.755)--(2.847,6.724)--(2.847,6.710)%
+  --(2.880,6.690)--(2.880,6.681)--(2.880,6.672)--(2.912,6.670)--(2.912,6.654)--(2.945,6.650)%
+  --(2.977,6.640)--(2.977,6.632)--(2.977,6.627)--(3.010,6.620)--(3.010,6.606)--(3.010,6.596)%
+  --(3.043,6.592)--(3.043,6.579)--(3.043,6.573)--(3.075,6.571)--(3.075,6.565)--(3.108,6.556)%
+  --(3.140,6.554)--(3.140,6.531)--(3.140,6.527)--(3.173,6.516)--(3.173,6.508)--(3.173,6.495)%
+  --(3.205,6.480)--(3.238,6.478)--(3.238,6.476)--(3.270,6.475)--(3.270,6.473)--(3.303,6.468)%
+  --(3.336,6.467)--(3.368,6.466)--(3.368,6.462)--(3.401,6.457)--(3.401,6.453)--(3.433,6.445)%
+  --(3.498,6.442)--(3.531,6.437)--(3.531,6.432)--(3.531,6.431)--(3.564,6.424)--(3.661,6.418)%
+  --(3.791,6.404)--(3.791,6.391)--(3.824,6.368)--(3.954,6.366)--(3.954,6.362)--(4.247,6.356)%
+  --(4.247,6.352)--(4.247,6.348)--(4.247,6.345)--(4.280,6.343)--(4.345,6.336)--(4.345,6.334)%
+  --(4.345,6.333)--(4.345,6.329)--(4.345,6.325)--(4.377,6.321)--(4.377,6.298)--(4.377,6.297)%
+  --(4.410,10.281)--(4.410,7.757)--(4.410,7.655)--(4.410,7.595)--(4.410,7.337)--(4.410,7.336)%
+  --(4.410,7.313)--(4.410,7.240)--(4.410,7.103)--(4.443,7.074)--(4.443,6.741)--(4.443,6.518)%
+  --(4.443,6.361)--(4.443,6.249)--(4.443,6.245)--(4.443,6.127)--(4.443,6.016)--(4.443,6.005)%
+  --(4.443,5.952)--(4.475,5.941)--(4.475,5.869)--(4.475,5.822)--(4.475,5.819)--(4.475,5.816)%
+  --(4.475,5.805)--(4.475,5.768)--(4.475,5.704)--(4.475,5.666)--(4.475,5.656)--(4.508,5.603)%
+  --(4.508,5.593)--(4.508,5.572)--(4.508,5.564)--(4.508,5.545)--(4.508,5.544)--(4.508,5.538)%
+  --(4.508,5.525)--(4.540,5.516)--(4.540,5.502)--(4.540,5.488)--(4.540,5.473)--(4.540,5.447)%
+  --(4.540,5.428)--(4.540,5.400)--(4.540,5.379)--(4.540,5.367)--(4.540,5.351)--(4.573,5.341)%
+  --(4.573,5.338)--(4.573,5.326)--(4.573,5.307)--(4.573,5.280)--(4.573,5.271)--(4.605,5.252)%
+  --(4.605,5.196)--(4.605,5.189)--(4.605,5.167)--(4.605,5.121)--(4.605,5.087)--(4.605,5.069)%
+  --(4.638,5.038)--(4.638,5.025)--(4.638,5.009)--(4.638,4.980)--(4.638,4.948)--(4.670,4.913)%
+  --(4.670,4.909)--(4.670,4.834)--(4.670,4.833)--(4.670,4.827)--(4.670,4.813)--(4.670,4.811)%
+  --(4.670,4.809)--(4.703,4.797)--(4.703,4.776)--(4.703,4.771)--(4.703,4.766)--(4.703,4.741)%
+  --(4.703,4.703)--(4.703,4.692)--(4.736,4.680)--(4.736,4.677)--(4.736,4.643)--(4.736,4.600)%
+  --(4.768,4.599)--(4.801,4.595)--(4.801,4.547)--(4.801,4.527)--(4.833,4.525)--(4.833,4.511)%
+  --(4.866,4.488)--(4.898,4.484)--(4.898,4.477)--(4.898,4.474)--(4.931,4.453)--(4.931,4.452)%
+  --(4.931,4.446)--(4.931,4.441)--(4.996,4.436)--(5.029,4.423)--(5.061,4.409)--(5.094,4.406)%
+  --(5.159,4.398)--(5.191,4.379)--(5.322,4.378)--(5.387,4.372)--(5.419,4.361)--(5.452,4.333)%
+  --(5.484,4.319)--(5.517,4.317)--(5.550,4.314)--(5.550,4.309)--(5.647,4.298)--(5.680,4.292)%
+  --(5.777,4.288)--(5.908,4.281)--(6.005,4.280)--(6.038,4.271)--(6.070,4.261)--(6.070,4.253)%
+  --(6.070,4.243)--(6.136,4.242)--(6.136,4.237)--(6.168,4.233)--(6.168,4.229)--(6.168,4.227)%
+  --(6.201,4.219)--(6.201,4.215)--(6.266,4.197)--(6.266,4.187)--(6.298,4.178)--(6.298,4.153)%
+  --(6.298,4.133)--(6.331,4.128)--(6.363,7.657)--(6.363,5.263)--(6.363,5.254)--(6.363,5.134)%
+  --(6.363,5.125)--(6.363,5.119)--(6.363,5.102)--(6.396,5.061)--(6.396,4.983)--(6.396,4.788)%
+  --(6.396,4.763)--(6.396,4.649)--(6.396,4.619)--(6.396,4.526)--(6.396,4.497)--(6.396,4.422)%
+  --(6.396,4.402)--(6.396,4.346)--(6.429,4.328)--(6.429,4.316)--(6.429,4.295)--(6.429,4.136)%
+  --(6.429,4.080)--(6.429,3.992)--(6.429,3.950)--(6.461,3.930)--(6.461,3.925)--(6.461,3.921)%
+  --(6.461,3.798)--(6.461,3.715)--(6.461,3.617)--(6.461,3.561)--(6.461,3.536)--(6.494,3.530)%
+  --(6.494,3.376)--(6.494,3.369)--(6.494,3.330)--(6.526,3.324)--(6.526,3.315)--(6.559,3.294)%
+  --(6.559,3.285)--(6.559,3.282)--(6.591,3.250)--(6.591,3.215)--(6.624,3.207)--(6.624,3.205)%
+  --(6.656,3.193)--(6.656,3.183)--(6.689,3.168)--(6.689,3.158)--(6.689,3.148)--(6.689,3.143)%
+  --(6.722,3.127)--(6.722,3.126)--(6.754,3.062)--(6.754,3.060)--(6.754,2.974)--(6.754,2.966)%
+  --(6.754,2.955)--(6.787,2.948)--(6.787,2.935)--(6.819,2.931)--(6.884,2.919)--(6.884,2.892)%
+  --(6.949,2.882)--(6.949,2.861)--(6.982,2.858)--(7.015,2.846)--(7.015,2.844)--(7.112,2.828)%
+  --(7.112,2.715)--(7.210,2.714)--(7.210,2.706)--(7.210,2.692)--(7.243,2.683)--(7.275,2.668)%
+  --(7.275,2.660)--(7.275,2.654)--(7.308,2.620)--(7.536,2.619)--(7.633,2.614)--(7.731,2.614)%
+  --(7.763,2.599)--(7.926,2.596)--(7.991,2.591)--(8.024,2.586)--(8.056,2.566)--(8.089,2.566)%
+  --(8.089,2.549)--(8.154,2.545)--(8.317,5.851)--(8.317,4.227)--(8.317,4.224)--(8.317,4.171)%
+  --(8.317,4.157)--(8.317,4.148)--(8.317,4.081)--(8.349,4.080)--(8.349,3.969)--(8.349,3.865)%
+  --(8.349,3.862)--(8.349,3.858)--(8.349,3.842)--(8.349,3.814)--(8.382,3.759)--(8.382,3.735)%
+  --(8.382,3.726)--(8.382,3.706)--(8.382,3.677)--(8.382,3.598)--(8.415,3.587)--(8.415,3.465)%
+  --(8.415,3.462)--(8.415,3.453)--(8.415,3.444)--(8.415,3.273)--(8.447,3.272)--(8.447,3.263)%
+  --(8.447,3.260)--(8.447,3.237)--(8.447,3.164)--(8.447,3.077)--(8.480,3.029)--(8.480,3.005)%
+  --(8.480,2.958)--(8.480,2.948)--(8.512,2.937)--(8.512,2.904)--(8.512,2.875)--(8.512,2.853)%
+  --(8.512,2.846)--(8.545,2.840)--(8.545,2.822)--(8.545,2.789)--(8.545,2.782)--(8.577,2.782)%
+  --(8.577,2.758)--(8.577,2.722)--(8.577,2.719)--(8.577,2.700)--(8.577,2.676)--(8.577,2.666)%
+  --(8.610,2.651)--(8.642,2.648)--(8.642,2.638)--(8.642,2.612)--(8.642,2.605)--(8.675,2.593)%
+  --(8.675,2.591)--(8.675,2.590)--(8.708,2.580)--(8.708,2.574)--(8.740,2.573)--(8.773,2.571)%
+  --(8.805,2.562)--(8.805,2.540)--(8.838,2.536)--(8.870,2.525)--(8.903,2.515)--(8.903,2.496)%
+  --(8.903,2.474)--(8.903,2.462)--(8.936,2.459)--(8.968,2.445)--(8.968,2.440)--(9.001,2.431)%
+  --(9.001,2.380)--(9.033,2.376)--(9.066,2.367)--(9.098,2.251)--(9.131,2.247)--(9.131,2.242)%
+  --(9.131,2.227)--(9.163,2.225)--(9.163,2.224)--(9.163,2.215)--(9.196,2.210)--(9.196,2.203)%
+  --(9.196,2.196)--(9.229,2.195)--(9.229,2.177)--(9.261,2.175)--(9.294,2.154)--(9.294,2.145)%
+  --(9.326,2.137)--(9.489,2.136)--(9.619,2.130)--(9.652,2.127)--(9.717,2.119)--(9.749,2.119)%
+  --(9.847,2.116)--(9.847,2.113)--(9.912,2.108)--(10.075,2.096)--(10.075,2.095)--(10.108,2.094)%
+  --(10.205,2.086)--(10.238,2.080)--(10.270,5.213)--(10.270,3.939)--(10.270,3.927)--(10.270,3.898)%
+  --(10.270,3.891)--(10.270,3.872)--(10.270,3.868)--(10.303,3.859)--(10.303,3.830)--(10.303,3.793)%
+  --(10.303,3.678)--(10.303,3.668)--(10.303,3.624)--(10.303,3.544)--(10.335,3.383)--(10.335,3.272)%
+  --(10.335,3.220)--(10.335,3.076)--(10.335,3.043)--(10.335,3.016)--(10.335,2.962)--(10.368,2.954)%
+  --(10.368,2.949)--(10.368,2.936)--(10.368,2.907)--(10.401,2.893)--(10.401,2.832)--(10.401,2.824)%
+  --(10.401,2.821)--(10.401,2.809)--(10.401,2.807)--(10.433,2.802)--(10.433,2.790)--(10.433,2.788)%
+  --(10.466,2.781)--(10.466,2.769)--(10.466,2.767)--(10.466,2.754)--(10.498,2.748)--(10.498,2.744)%
+  --(10.498,2.729)--(10.498,2.702)--(10.531,2.678)--(10.563,2.671)--(10.563,2.656)--(10.563,2.653)%
+  --(10.563,2.642)--(10.596,2.638)--(10.596,2.631)--(10.596,2.627)--(10.628,2.619)--(10.628,2.613)%
+  --(10.661,2.583)--(10.661,2.571)--(10.661,2.567)--(10.661,2.560)--(10.661,2.550)--(10.694,2.538)%
+  --(10.694,2.536)--(10.726,2.535)--(10.726,2.509)--(10.726,2.506)--(10.759,2.493)--(10.759,2.486)%
+  --(10.759,2.484)--(10.791,2.482)--(10.824,2.465)--(10.889,2.461)--(10.889,2.333)--(10.922,2.325)%
+  --(10.922,2.314)--(10.954,2.309)--(10.987,2.298)--(10.987,2.287)--(11.019,2.277)--(11.019,2.257)%
+  --(11.019,2.243)--(11.052,2.239)--(11.149,2.217)--(11.149,2.213)--(11.182,2.205)--(11.182,2.199)%
+  --(11.215,2.192)--(11.215,2.178)--(11.215,2.171)--(11.215,2.168)--(11.215,2.165)--(11.247,2.163)%
+  --(11.247,2.162)--(11.247,2.156)--(11.280,2.144)--(11.312,2.137)--(11.312,2.130)--(11.312,2.128)%
+  --(11.345,2.118)--(11.377,2.114)--(11.410,2.111)--(11.410,2.091)--(11.410,2.084)--(11.442,2.067)%
+  --(11.475,2.060)--(11.508,2.055)--(11.540,2.051)--(11.735,2.051)--(11.833,2.041)--(11.963,2.038)%
+  --(11.963,2.034)--(12.126,2.027)--(12.126,2.018)--(12.224,5.079)--(12.224,4.303)--(12.224,4.254)%
+  --(12.224,4.247)--(12.256,4.193)--(12.256,4.190)--(12.256,4.158)--(12.256,4.042)--(12.256,4.029)%
+  --(12.289,4.026)--(12.289,3.956)--(12.289,3.802)--(12.289,3.707)--(12.321,3.705)--(12.321,3.665)%
+  --(12.321,3.659)--(12.321,3.631)--(12.321,3.624)--(12.321,3.611)--(12.354,3.591)--(12.354,3.588)%
+  --(12.354,3.587)--(12.354,3.583)--(12.387,3.574)--(12.387,3.555)--(12.387,3.514)--(12.387,3.502)%
+  --(12.419,3.492)--(12.419,3.480)--(12.452,3.435)--(12.452,3.433)--(12.452,3.404)--(12.484,3.399)%
+  --(12.484,3.393)--(12.484,3.379)--(12.517,3.371)--(12.517,3.353)--(12.549,3.349)--(12.582,3.337)%
+  --(12.582,3.331)--(12.582,3.330)--(12.582,3.312)--(12.582,3.311)--(12.614,3.308)--(12.614,3.293)%
+  --(12.614,3.266)--(12.647,3.264)--(12.647,3.259)--(12.647,3.258)--(12.647,3.256)--(12.680,3.253)%
+  --(12.680,3.242)--(12.680,3.239)--(12.680,3.236)--(12.680,3.230)--(12.712,3.227)--(12.712,3.221)%
+  --(12.712,3.206)--(12.712,3.187)--(12.745,3.179)--(12.745,3.173)--(12.745,3.163)--(12.745,3.157)%
+  --(12.810,3.155)--(12.810,3.153)--(12.810,3.149)--(12.810,3.142)--(12.842,3.102)--(12.842,3.096)%
+  --(12.842,3.080)--(12.875,3.075)--(12.875,3.051)--(12.908,3.043)--(12.940,3.041)--(13.005,3.034)%
+  --(13.038,2.987)--(13.038,2.972)--(13.038,2.968)--(13.038,2.966)--(13.070,2.961)--(13.070,2.947)%
+  --(13.070,2.938)--(13.070,2.936)--(13.070,2.929)--(13.103,2.923)--(13.103,2.920)--(13.103,2.915)%
+  --(13.135,2.902)--(13.168,2.900)--(13.201,2.890)--(13.201,2.866)--(13.201,2.858)--(13.298,2.849)%
+  --(13.363,2.845)--(13.396,2.843)--(13.428,2.841)--(13.526,2.838)--(13.624,2.837)--(13.624,2.827)%
+  --(13.819,2.822)--(13.884,2.820)--(13.949,2.815)--(13.982,2.814)--(14.014,2.808)--(14.014,2.804)%
+  --(14.080,2.802)--(14.112,2.801)--(14.145,2.793);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,11.075)--(2.424,1.845)--(15.447,1.845)--(15.447,11.075)--cycle;
