--- a/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_resource_addition_plot.tex
+++ b/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_resource_addition_plot.tex
@@ -1,195 +1,133 @@
 \tikzpicture[gnuplot]
 %% generated with GNUPLOT 6.0p1 (Lua 5.2; terminal rev. Jun 2020, script rev. 118)
-%% Tue 17 Dec 2024 01:59:47 PM UTC
+%% tir 17 dec 2024 22:39:21 CET
 \path (0.000,0.000) rectangle (16.000,12.000);
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (2.424,1.845)--(15.447,1.845);
-\gpcolor{color=gp lt color border}
+\gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
+\gpsetlinewidth{2.00}
+\draw[gp path] (2.424,1.845)--(15.447,1.845);
+\gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,1.845)--(2.604,1.845);
 \draw[gp path] (15.447,1.845)--(15.267,1.845);
-\node[gp node right] at (2.240,1.845) {$1.8\times10^{11}$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
+\node[gp node right] at (2.240,1.845) {$1.85\times10^{11}$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
 \draw[gp path] (2.424,3.383)--(15.447,3.383);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,3.383)--(2.604,3.383);
 \draw[gp path] (15.447,3.383)--(15.267,3.383);
-\node[gp node right] at (2.240,3.383) {$1.85\times10^{11}$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
+\node[gp node right] at (2.240,3.383) {$1.9\times10^{11}$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
 \draw[gp path] (2.424,4.922)--(15.447,4.922);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,4.922)--(2.604,4.922);
 \draw[gp path] (15.447,4.922)--(15.267,4.922);
-\node[gp node right] at (2.240,4.922) {$1.9\times10^{11}$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
+\node[gp node right] at (2.240,4.922) {$1.95\times10^{11}$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
 \draw[gp path] (2.424,6.460)--(15.447,6.460);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,6.460)--(2.604,6.460);
 \draw[gp path] (15.447,6.460)--(15.267,6.460);
-\node[gp node right] at (2.240,6.460) {$1.95\times10^{11}$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
+\node[gp node right] at (2.240,6.460) {$2\times10^{11}$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
 \draw[gp path] (2.424,7.998)--(15.447,7.998);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,7.998)--(2.604,7.998);
 \draw[gp path] (15.447,7.998)--(15.267,7.998);
-\node[gp node right] at (2.240,7.998) {$2\times10^{11}$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
+\node[gp node right] at (2.240,7.998) {$2.05\times10^{11}$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
 \draw[gp path] (2.424,9.537)--(15.447,9.537);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,9.537)--(2.604,9.537);
 \draw[gp path] (15.447,9.537)--(15.267,9.537);
-\node[gp node right] at (2.240,9.537) {$2.05\times10^{11}$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
+\node[gp node right] at (2.240,9.537) {$2.1\times10^{11}$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
 \draw[gp path] (2.424,11.075)--(15.447,11.075);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,11.075)--(2.604,11.075);
 \draw[gp path] (15.447,11.075)--(15.267,11.075);
-\node[gp node right] at (2.240,11.075) {$2.1\times10^{11}$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
+\node[gp node right] at (2.240,11.075) {$2.15\times10^{11}$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
 \draw[gp path] (2.424,1.845)--(2.424,11.075);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,1.845)--(2.424,2.025);
 \draw[gp path] (2.424,11.075)--(2.424,10.895);
 \node[gp node left,rotate=270] at (2.424,1.661) {$0$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
 \draw[gp path] (4.052,1.845)--(4.052,11.075);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
 \draw[gp path] (4.052,1.845)--(4.052,2.025);
 \draw[gp path] (4.052,11.075)--(4.052,10.895);
 \node[gp node left,rotate=270] at (4.052,1.661) {$50$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
 \draw[gp path] (5.680,1.845)--(5.680,11.075);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
 \draw[gp path] (5.680,1.845)--(5.680,2.025);
 \draw[gp path] (5.680,11.075)--(5.680,10.895);
 \node[gp node left,rotate=270] at (5.680,1.661) {$100$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
 \draw[gp path] (7.308,1.845)--(7.308,11.075);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
 \draw[gp path] (7.308,1.845)--(7.308,2.025);
 \draw[gp path] (7.308,11.075)--(7.308,10.895);
 \node[gp node left,rotate=270] at (7.308,1.661) {$150$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
 \draw[gp path] (8.936,1.845)--(8.936,11.075);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
 \draw[gp path] (8.936,1.845)--(8.936,2.025);
 \draw[gp path] (8.936,11.075)--(8.936,10.895);
 \node[gp node left,rotate=270] at (8.936,1.661) {$200$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
 \draw[gp path] (10.563,1.845)--(10.563,11.075);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
 \draw[gp path] (10.563,1.845)--(10.563,2.025);
 \draw[gp path] (10.563,11.075)--(10.563,10.895);
 \node[gp node left,rotate=270] at (10.563,1.661) {$250$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
 \draw[gp path] (12.191,1.845)--(12.191,11.075);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
 \draw[gp path] (12.191,1.845)--(12.191,2.025);
 \draw[gp path] (12.191,11.075)--(12.191,10.895);
 \node[gp node left,rotate=270] at (12.191,1.661) {$300$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
 \draw[gp path] (13.819,1.845)--(13.819,11.075);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
 \draw[gp path] (13.819,1.845)--(13.819,2.025);
 \draw[gp path] (13.819,11.075)--(13.819,10.895);
 \node[gp node left,rotate=270] at (13.819,1.661) {$350$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
 \draw[gp path] (15.447,1.845)--(15.447,11.075);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
 \draw[gp path] (15.447,1.845)--(15.447,2.025);
 \draw[gp path] (15.447,11.075)--(15.447,10.895);
@@ -197,74 +135,93 @@
 \draw[gp path] (2.424,11.075)--(2.424,1.845)--(15.447,1.845)--(15.447,11.075)--cycle;
 \gpcolor{rgb color={0.000,0.000,0.000}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,7.317)--(2.424,7.254)--(2.424,7.224)--(2.457,7.155)--(2.457,7.130)%
-  --(2.457,7.091)--(2.457,7.072)--(2.489,7.060)--(2.489,7.049)--(2.489,7.038)--(2.522,7.018)%
-  --(2.522,6.999)--(2.554,6.957)--(2.554,6.945)--(2.554,6.918)--(2.587,6.918)--(2.587,6.902)%
-  --(2.587,6.859)--(2.587,6.850)--(2.619,6.846)--(2.619,6.834)--(2.652,6.801)--(2.652,6.784)%
-  --(2.684,6.773)--(2.684,6.757)--(2.684,6.743)--(2.717,6.742)--(2.717,6.735)--(2.717,6.710)%
-  --(2.717,6.699)--(2.750,6.691)--(2.750,6.648)--(2.750,6.630)--(2.782,6.618)--(2.782,6.593)%
-  --(2.782,6.571)--(2.782,6.552)--(2.815,6.531)--(2.815,6.460)--(2.815,6.455)--(2.847,6.407)%
-  --(2.880,6.379)--(2.880,6.326)--(2.880,6.312)--(2.912,6.300)--(2.912,6.292)--(2.945,6.280)%
-  --(2.945,6.270)--(2.945,6.250)--(2.977,6.241)--(2.977,6.217)--(2.977,6.214)--(2.977,6.212)%
-  --(3.043,6.207)--(3.043,6.183)--(3.043,6.181)--(3.075,6.171)--(3.075,6.167)--(3.108,6.160)%
-  --(3.108,6.148)--(3.140,6.141)--(3.140,6.127)--(3.140,6.122)--(3.173,6.108)--(3.173,6.093)%
-  --(3.205,6.088)--(3.238,6.087)--(3.238,6.081)--(3.270,6.060)--(3.270,6.056)--(3.270,6.054)%
-  --(3.336,6.053)--(3.336,6.049)--(3.336,6.030)--(3.336,6.018)--(3.368,6.016)--(3.368,6.015)%
-  --(3.466,6.015)--(3.466,6.012)--(3.498,6.009)--(3.498,5.999)--(3.531,5.997)--(3.531,5.989)%
-  --(3.531,5.978)--(3.564,5.974)--(3.564,5.973)--(3.564,5.961)--(3.564,5.944)--(3.596,5.942)%
-  --(3.596,5.938)--(3.629,5.908)--(3.694,5.904)--(3.694,5.892)--(3.694,5.889)--(3.726,5.886)%
-  --(3.726,5.861)--(3.726,5.847)--(3.759,5.829)--(3.759,5.822)--(3.759,5.821)--(3.759,5.802)%
-  --(3.759,5.793)--(3.791,5.779)--(3.791,5.767)--(3.791,5.758)--(3.791,5.767)--(3.791,5.760)%
-  --(3.791,5.754)--(3.824,5.745)--(3.824,5.742)--(3.824,5.732)--(3.824,5.725)--(3.857,5.716)%
-  --(3.857,5.700)--(3.857,5.698)--(3.857,5.695)--(3.857,5.694)--(3.889,5.687)--(3.889,5.682)%
-  --(3.889,5.671)--(3.889,5.660)--(3.922,5.659)--(3.922,5.644)--(3.922,5.634)--(3.922,5.638)%
-  --(3.922,5.628)--(3.954,5.621)--(3.954,5.616)--(3.954,5.613)--(3.954,5.608)--(3.987,5.597)%
-  --(3.987,5.592)--(3.987,5.589)--(4.019,5.587)--(4.019,5.586)--(4.052,5.585)--(4.052,5.578)%
-  --(4.084,5.577)--(4.084,5.576)--(4.117,5.574)--(4.150,5.572)--(4.150,5.570)--(4.182,5.576)%
-  --(4.182,5.575)--(4.182,5.570)--(4.182,5.569)--(4.215,5.566)--(4.215,5.603)--(4.247,5.602)%
-  --(4.247,5.597)--(4.247,5.590)--(4.280,5.588)--(4.312,5.591)--(4.312,5.590)--(4.345,5.590)%
-  --(4.345,5.592)--(4.345,5.585)--(4.345,5.580)--(4.377,5.579)--(4.410,5.582)--(4.410,5.581)%
-  --(4.410,5.578)--(4.443,5.574)--(4.475,5.568)--(4.508,5.562)--(4.508,5.561)--(4.540,5.541)%
-  --(4.540,5.539)--(4.573,5.536)--(4.573,5.534)--(4.605,5.533)--(4.605,5.530)--(4.638,5.530)%
-  --(4.670,5.526)--(4.736,5.534)--(4.768,5.533)--(4.768,5.531)--(4.768,5.528)--(4.801,5.527)%
-  --(4.833,5.535)--(4.833,5.534)--(4.898,5.554)--(4.898,5.549)--(4.931,5.549)--(4.931,5.547)%
-  --(4.963,5.546)--(4.996,5.545)--(4.996,5.547)--(5.029,5.550)--(5.061,5.560)--(5.159,5.579)%
-  --(5.191,5.587)--(5.224,5.586)--(5.322,5.625)--(5.354,5.622)--(5.387,5.629)--(5.387,5.633)%
-  --(5.387,5.631)--(5.419,5.631)--(5.452,5.631)--(5.550,10.359)--(5.550,10.297)--(5.550,10.248)%
-  --(5.550,10.243)--(5.582,10.200)--(5.582,10.184)--(5.647,10.183)--(5.647,10.175)--(5.712,10.173)%
-  --(5.745,10.151)--(5.777,10.133)--(5.810,10.132)--(5.843,10.129)--(5.875,10.121)--(8.805,6.379)%
-  --(8.805,6.350)--(8.838,6.334)--(8.838,6.286)--(8.838,6.280)--(8.838,6.257)--(8.838,6.244)%
-  --(8.870,6.235)--(8.870,6.178)--(8.870,6.170)--(8.870,6.169)--(8.870,6.155)--(8.870,6.150)%
-  --(8.903,6.126)--(8.903,6.083)--(8.903,6.077)--(8.903,6.067)--(8.903,6.055)--(8.936,6.025)%
-  --(8.936,5.995)--(8.936,5.991)--(8.936,5.986)--(8.968,5.981)--(8.968,5.974)--(8.968,5.970)%
-  --(9.001,5.966)--(9.001,5.962)--(9.001,5.923)--(9.001,5.905)--(9.001,5.904)--(9.033,5.893)%
-  --(9.033,5.882)--(9.033,5.881)--(9.033,5.878)--(9.066,5.876)--(9.066,5.875)--(9.098,5.874)%
-  --(9.098,5.857)--(9.131,5.844)--(9.131,5.840)--(9.131,5.835)--(9.163,5.828)--(9.163,5.818)%
-  --(9.163,5.815)--(9.196,5.813)--(9.196,5.809)--(9.196,5.804)--(9.196,5.797)--(9.196,5.796)%
-  --(9.229,5.793)--(9.229,5.791)--(9.229,5.788)--(9.229,5.784)--(9.229,5.783)--(9.261,5.777)%
-  --(9.261,5.785)--(9.261,5.784)--(9.294,5.776)--(9.294,5.775)--(9.294,5.774)--(9.326,5.773)%
-  --(9.359,5.773)--(9.359,5.772)--(9.391,5.772)--(9.391,5.770)--(9.391,5.766)--(9.424,5.775)%
-  --(9.456,5.768)--(9.489,5.768)--(9.522,5.760)--(9.522,5.751)--(9.554,5.749)--(9.554,5.746)%
-  --(9.587,5.742)--(9.587,5.741)--(9.587,5.740)--(9.619,5.736)--(9.619,5.732)--(9.619,5.731)%
-  --(9.717,5.730)--(9.815,5.728)--(9.847,5.726)--(9.847,5.721)--(9.847,5.720)--(10.042,5.718)%
-  --(10.075,5.716)--(10.108,5.715)--(10.140,5.713)--(10.140,5.723)--(10.205,5.720)--(10.270,5.719)%
-  --(10.303,5.718)--(10.303,5.716)--(10.401,5.715)--(10.401,5.714)--(10.531,5.714)--(10.628,5.712)%
-  --(10.661,5.739)--(10.726,5.742)--(10.791,5.741)--(10.824,5.741)--(10.922,5.740)--(11.019,5.740)%
-  --(11.052,5.739)--(11.084,5.738)--(11.084,5.737)--(11.117,5.736)--(11.182,5.736)--(11.215,5.736)%
-  --(11.280,5.735)--(11.377,5.740)--(11.442,5.740)--(11.442,5.739)--(11.508,5.738)--(11.833,5.737)%
-  --(11.866,5.737)--(11.866,5.736)--(11.963,5.736)--(12.028,5.735)--(12.094,3.315)--(12.094,3.304)%
-  --(12.094,3.297)--(12.094,3.286)--(12.126,3.299)--(12.126,3.232)--(12.126,3.113)--(12.159,3.108)%
-  --(12.159,3.102)--(12.159,3.099)--(12.159,3.092)--(12.159,3.018)--(12.191,3.014)--(12.191,3.010)%
-  --(12.224,2.965)--(12.256,2.962)--(12.256,2.959)--(12.289,2.957)--(12.289,2.955)--(12.289,2.954)%
-  --(12.321,2.953)--(12.321,2.950)--(12.354,2.946)--(12.354,2.945)--(12.354,2.942)--(12.387,2.941)%
-  --(12.452,2.941)--(12.452,2.940)--(12.484,2.939)--(12.484,2.937)--(12.517,2.935)--(12.517,2.933)%
-  --(12.517,2.931)--(12.549,2.927)--(12.549,2.925)--(12.582,2.924)--(12.582,2.923)--(12.582,2.922)%
-  --(12.614,2.921)--(12.647,2.920)--(12.680,2.920)--(12.680,2.919)--(12.777,2.918)--(12.810,2.917)%
-  --(12.810,2.916)--(12.908,2.916)--(12.940,2.916)--(12.973,2.911)--(13.038,2.910)--(13.070,2.910)%
-  --(13.070,2.909)--(13.135,2.909)--(13.168,2.906)--(13.168,2.905)--(13.168,2.904)--(13.201,2.903)%
-  --(13.233,2.901)--(13.266,2.901)--(13.266,2.900)--(13.298,2.898)--(13.331,2.898)--(13.363,2.897)%
-  --(13.428,2.897)--(13.461,2.896)--(13.494,2.895)--(13.526,2.895)--(13.559,2.894)--(13.689,2.892)%
-  --(13.787,2.892)--(13.819,2.892)--(13.884,2.891)--(13.949,2.890)--(14.014,2.889);
+\draw[gp path] (2.424,6.830)--(2.424,6.805)--(2.424,6.769)--(2.424,6.745)--(2.424,6.709)%
+  --(2.424,6.681)--(2.424,6.661)--(2.424,6.660)--(2.457,6.635)--(2.457,6.584)--(2.457,6.562)%
+  --(2.457,6.557)--(2.457,6.543)--(2.457,6.537)--(2.457,6.518)--(2.457,6.509)--(2.457,6.493)%
+  --(2.457,6.476)--(2.457,6.472)--(2.457,6.466)--(2.457,6.448)--(2.489,6.441)--(2.489,6.424)%
+  --(2.489,6.379)--(2.489,6.369)--(2.489,6.308)--(2.489,6.300)--(2.489,6.291)--(2.489,6.261)%
+  --(2.489,6.233)--(2.489,6.216)--(2.489,6.208)--(2.489,6.205)--(2.522,6.201)--(2.522,6.190)%
+  --(2.522,6.181)--(2.522,6.167)--(2.522,6.165)--(2.522,6.161)--(2.522,6.158)--(2.522,6.157)%
+  --(2.522,6.133)--(2.522,6.123)--(2.522,6.116)--(2.554,6.112)--(2.554,6.104)--(2.554,6.066)%
+  --(2.554,6.062)--(2.554,6.041)--(2.554,6.033)--(2.554,6.028)--(2.554,6.025)--(2.554,5.996)%
+  --(2.554,5.992)--(2.554,5.985)--(2.587,5.968)--(2.587,5.941)--(2.587,5.892)--(2.587,5.886)%
+  --(2.587,5.880)--(2.587,5.878)--(2.587,5.871)--(2.587,5.870)--(2.587,5.861)--(2.587,5.840)%
+  --(2.587,5.839)--(2.587,5.820)--(2.619,5.819)--(2.619,5.813)--(2.619,5.811)--(2.619,5.807)%
+  --(2.619,5.806)--(2.619,5.795)--(2.619,5.787)--(2.619,5.776)--(2.652,5.775)--(2.652,5.774)%
+  --(2.652,5.770)--(2.652,5.766)--(2.652,5.752)--(2.652,5.739)--(2.652,5.735)--(2.684,5.729)%
+  --(2.684,5.722)--(2.684,5.715)--(2.684,5.708)--(2.684,5.699)--(2.684,5.693)--(2.717,5.681)%
+  --(2.717,5.680)--(2.717,5.672)--(2.717,5.663)--(2.717,5.655)--(2.717,5.651)--(2.750,5.646)%
+  --(2.750,5.641)--(2.750,5.626)--(2.750,5.618)--(2.782,5.616)--(2.782,5.613)--(2.782,5.612)%
+  --(2.782,5.603)--(2.782,5.601)--(2.782,5.598)--(2.782,5.589)--(2.782,5.585)--(2.815,5.578)%
+  --(2.815,5.574)--(2.847,5.569)--(2.847,5.562)--(2.847,5.557)--(2.880,5.556)--(2.880,5.546)%
+  --(2.912,5.545)--(2.912,5.543)--(2.912,5.529)--(2.945,5.527)--(2.945,5.517)--(2.945,5.516)%
+  --(2.977,5.512)--(2.977,5.510)--(2.977,5.506)--(2.977,5.503)--(3.043,5.499)--(3.043,5.498)%
+  --(3.043,5.494)--(3.075,5.492)--(3.108,5.490)--(3.140,5.488)--(3.173,5.487)--(3.173,5.484)%
+  --(3.173,5.480)--(3.173,5.479)--(3.205,5.475)--(3.205,5.469)--(3.238,5.465)--(3.238,5.462)%
+  --(3.303,5.461)--(3.303,5.457)--(3.303,5.456)--(3.336,5.455)--(3.336,5.454)--(3.336,5.452)%
+  --(3.368,5.452)--(3.368,5.443)--(3.401,5.442)--(3.401,5.441)--(3.401,5.437)--(3.433,5.432)%
+  --(3.466,5.430)--(3.466,5.429)--(3.466,5.428)--(3.498,5.428)--(3.498,5.427)--(3.498,5.425)%
+  --(3.531,5.422)--(3.564,5.420)--(3.596,5.416)--(3.629,5.415)--(3.661,5.414)--(3.824,5.413)%
+  --(3.824,5.412)--(3.824,5.411)--(3.857,5.411)--(3.889,5.410)--(3.954,5.406)--(3.954,5.404)%
+  --(3.954,5.403)--(4.019,5.403)--(4.052,5.402)--(4.052,5.401)--(4.052,5.397)--(4.117,5.397)%
+  --(4.150,5.394)--(4.150,5.393)--(4.182,5.393)--(4.182,5.391)--(4.182,5.390)--(4.215,5.386)%
+  --(4.280,5.384)--(4.312,5.383)--(4.345,5.383)--(4.345,5.381)--(4.345,5.379)--(4.377,5.378)%
+  --(4.443,5.375)--(4.508,5.372)--(4.540,5.368)--(4.540,5.367)--(4.573,5.365)--(4.605,5.364)%
+  --(4.638,5.359)--(4.670,5.358)--(4.670,5.357)--(4.736,5.355)--(4.801,5.355)--(4.866,5.354)%
+  --(4.898,5.353)--(4.931,5.352)--(5.061,5.352)--(5.094,5.351)--(5.289,5.349)--(5.322,5.348)%
+  --(5.387,5.345)--(5.484,5.345)--(5.615,5.343)--(5.647,5.340)--(5.712,10.346)--(5.712,10.327)%
+  --(5.712,10.324)--(5.745,10.268)--(5.875,10.239)--(5.908,10.236)--(6.168,10.235)--(6.396,10.233)%
+  --(8.968,6.154)--(8.968,6.125)--(8.968,6.103)--(9.001,6.083)--(9.001,5.980)--(9.001,5.973)%
+  --(9.001,5.957)--(9.001,5.942)--(9.001,5.923)--(9.001,5.909)--(9.001,5.892)--(9.001,5.849)%
+  --(9.001,5.831)--(9.001,5.820)--(9.033,5.816)--(9.033,5.800)--(9.033,5.795)--(9.033,5.794)%
+  --(9.033,5.792)--(9.033,5.791)--(9.033,5.774)--(9.033,5.772)--(9.033,5.753)--(9.066,5.750)%
+  --(9.066,5.739)--(9.066,5.729)--(9.066,5.728)--(9.066,5.717)--(9.066,5.714)--(9.066,5.703)%
+  --(9.098,5.694)--(9.098,5.691)--(9.098,5.688)--(9.098,5.685)--(9.098,5.680)--(9.098,5.679)%
+  --(9.098,5.675)--(9.098,5.673)--(9.098,5.665)--(9.098,5.663)--(9.131,5.641)--(9.131,5.639)%
+  --(9.131,5.633)--(9.131,5.631)--(9.131,5.597)--(9.163,5.593)--(9.163,5.582)--(9.163,5.579)%
+  --(9.163,5.576)--(9.163,5.574)--(9.163,5.572)--(9.163,5.566)--(9.163,5.557)--(9.196,5.555)%
+  --(9.196,5.550)--(9.196,5.547)--(9.196,5.543)--(9.196,5.540)--(9.229,5.533)--(9.229,5.532)%
+  --(9.261,5.527)--(9.261,5.525)--(9.261,5.523)--(9.294,5.521)--(9.294,5.520)--(9.294,5.517)%
+  --(9.294,5.516)--(9.326,5.514)--(9.326,5.513)--(9.359,5.509)--(9.359,5.500)--(9.359,5.497)%
+  --(9.359,5.496)--(9.391,5.495)--(9.391,5.491)--(9.424,5.485)--(9.456,5.478)--(9.456,5.477)%
+  --(9.456,5.475)--(9.522,5.467)--(9.522,5.462)--(9.522,5.449)--(9.587,5.447)--(9.587,5.446)%
+  --(9.619,5.445)--(9.619,5.444)--(9.652,5.442)--(9.652,5.439)--(9.652,5.434)--(9.652,5.432)%
+  --(9.652,5.429)--(9.684,5.428)--(9.684,5.424)--(9.684,5.423)--(9.749,5.423)--(9.815,5.421)%
+  --(9.847,5.421)--(9.847,5.419)--(9.847,5.415)--(9.847,5.411)--(9.880,5.409)--(9.880,5.406)%
+  --(9.880,5.405)--(9.912,5.404)--(9.912,5.400)--(9.945,5.396)--(9.977,5.395)--(10.042,5.395)%
+  --(10.042,5.393)--(10.140,5.392)--(10.173,5.390)--(10.238,5.386)--(10.238,5.384)--(10.238,5.382)%
+  --(10.335,5.381)--(10.335,5.378)--(10.368,5.376)--(10.401,5.375)--(10.498,5.375)--(10.498,5.373)%
+  --(10.531,5.372)--(10.531,5.369)--(10.563,5.368)--(10.661,5.367)--(10.694,5.365)--(10.726,5.364)%
+  --(10.824,5.364)--(10.824,5.360)--(10.889,5.356)--(10.922,5.350)--(10.922,5.349)--(10.954,5.348)%
+  --(11.019,5.346)--(11.247,5.345)--(11.280,5.344)--(11.312,5.343)--(11.345,5.342)--(11.377,5.339)%
+  --(11.410,5.285)--(11.410,5.283)--(11.508,5.282)--(11.703,5.277)--(11.768,5.277)--(11.768,5.275)%
+  --(11.866,5.269)--(11.996,5.266)--(12.126,5.263)--(12.159,5.262)--(12.191,5.261)--(12.224,3.814)%
+  --(12.224,3.778)--(12.224,3.704)--(12.256,3.687)--(12.256,3.604)--(12.256,3.592)--(12.256,3.567)%
+  --(12.256,3.561)--(12.256,3.546)--(12.256,3.538)--(12.256,3.517)--(12.256,3.505)--(12.256,3.496)%
+  --(12.256,3.488)--(12.256,3.479)--(12.289,3.338)--(12.289,3.324)--(12.289,3.315)--(12.289,3.311)%
+  --(12.289,3.219)--(12.289,3.212)--(12.289,3.205)--(12.289,3.197)--(12.289,3.195)--(12.289,3.194)%
+  --(12.289,3.186)--(12.289,3.180)--(12.321,3.178)--(12.321,3.083)--(12.321,3.075)--(12.321,2.965)%
+  --(12.321,2.964)--(12.321,2.952)--(12.321,2.946)--(12.321,2.935)--(12.321,2.929)--(12.354,2.929)%
+  --(12.354,2.925)--(12.354,2.873)--(12.354,2.872)--(12.354,2.871)--(12.354,2.869)--(12.354,2.780)%
+  --(12.354,2.778)--(12.354,2.776)--(12.354,2.775)--(12.387,2.769)--(12.387,2.759)--(12.387,2.756)%
+  --(12.387,2.751)--(12.387,2.748)--(12.387,2.741)--(12.387,2.736)--(12.419,2.732)--(12.419,2.726)%
+  --(12.419,2.724)--(12.419,2.722)--(12.419,2.713)--(12.419,2.710)--(12.452,2.709)--(12.452,2.706)%
+  --(12.452,2.705)--(12.452,2.694)--(12.484,2.692)--(12.484,2.688)--(12.484,2.686)--(12.484,2.681)%
+  --(12.484,2.676)--(12.517,2.674)--(12.517,2.669)--(12.517,2.668)--(12.549,2.664)--(12.549,2.660)%
+  --(12.549,2.656)--(12.582,2.655)--(12.582,2.653)--(12.582,2.649)--(12.582,2.648)--(12.582,2.647)%
+  --(12.582,2.645)--(12.582,2.644)--(12.614,2.640)--(12.614,2.639)--(12.614,2.637)--(12.614,2.635)%
+  --(12.647,2.635)--(12.647,2.633)--(12.647,2.628)--(12.647,2.626)--(12.647,2.622)--(12.680,2.622)%
+  --(12.680,2.617)--(12.680,2.613)--(12.680,2.610)--(12.712,2.609)--(12.712,2.608)--(12.712,2.605)%
+  --(12.712,2.604)--(12.712,2.601)--(12.745,2.601)--(12.745,2.600)--(12.745,2.599)--(12.777,2.596)%
+  --(12.777,2.594)--(12.810,2.593)--(12.810,2.591)--(12.842,2.590)--(12.842,2.589)--(12.842,2.586)%
+  --(12.842,2.585)--(12.875,2.581)--(12.908,2.578)--(12.908,2.577)--(12.908,2.576)--(12.908,2.575)%
+  --(12.908,2.572)--(12.908,2.571)--(12.940,2.571)--(12.940,2.570)--(12.940,2.567)--(12.973,2.566)%
+  --(13.005,2.565)--(13.005,2.563)--(13.005,2.562)--(13.005,2.553)--(13.103,2.551)--(13.103,2.550)%
+  --(13.135,2.549)--(13.135,2.548)--(13.201,2.547)--(13.233,2.547)--(13.266,2.546)--(13.266,2.545)%
+  --(13.363,2.544)--(13.428,2.542)--(13.461,2.541)--(13.461,2.539)--(13.559,2.536)--(13.559,2.535)%
+  --(13.591,2.535)--(13.656,2.532)--(13.689,2.530)--(13.721,2.528)--(13.754,2.528)--(13.787,2.526)%
+  --(13.819,2.525)--(13.917,2.525)--(13.982,2.525)--(13.982,2.523)--(14.014,2.522)--(14.047,2.522)%
+  --(14.145,2.521)--(14.177,2.521);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,11.075)--(2.424,1.845)--(15.447,1.845)--(15.447,11.075)--cycle;
