--- a/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_resource_subtraction_plot.tex
+++ b/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_resource_subtraction_plot.tex
@@ -1,269 +1,225 @@
 \tikzpicture[gnuplot]
 %% generated with GNUPLOT 6.0p1 (Lua 5.2; terminal rev. Jun 2020, script rev. 118)
-%% Tue 17 Dec 2024 02:07:05 PM UTC
+%% tir 17 dec 2024 22:45:43 CET
 \path (0.000,0.000) rectangle (16.000,12.000);
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (2.424,1.845)--(15.447,1.845);
-\gpcolor{color=gp lt color border}
+\gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
+\gpsetlinewidth{2.00}
+\draw[gp path] (2.424,1.845)--(15.447,1.845);
+\gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,1.845)--(2.604,1.845);
 \draw[gp path] (15.447,1.845)--(15.267,1.845);
-\node[gp node right] at (2.240,1.845) {$1.8\times10^{11}$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
+\node[gp node right] at (2.240,1.845) {$1.85\times10^{11}$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
 \draw[gp path] (2.424,3.383)--(15.447,3.383);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,3.383)--(2.604,3.383);
 \draw[gp path] (15.447,3.383)--(15.267,3.383);
-\node[gp node right] at (2.240,3.383) {$1.85\times10^{11}$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
+\node[gp node right] at (2.240,3.383) {$1.9\times10^{11}$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
 \draw[gp path] (2.424,4.922)--(15.447,4.922);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,4.922)--(2.604,4.922);
 \draw[gp path] (15.447,4.922)--(15.267,4.922);
-\node[gp node right] at (2.240,4.922) {$1.9\times10^{11}$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
+\node[gp node right] at (2.240,4.922) {$1.95\times10^{11}$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
 \draw[gp path] (2.424,6.460)--(15.447,6.460);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,6.460)--(2.604,6.460);
 \draw[gp path] (15.447,6.460)--(15.267,6.460);
-\node[gp node right] at (2.240,6.460) {$1.95\times10^{11}$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
+\node[gp node right] at (2.240,6.460) {$2\times10^{11}$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
 \draw[gp path] (2.424,7.998)--(15.447,7.998);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,7.998)--(2.604,7.998);
 \draw[gp path] (15.447,7.998)--(15.267,7.998);
-\node[gp node right] at (2.240,7.998) {$2\times10^{11}$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
+\node[gp node right] at (2.240,7.998) {$2.05\times10^{11}$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
 \draw[gp path] (2.424,9.537)--(15.447,9.537);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,9.537)--(2.604,9.537);
 \draw[gp path] (15.447,9.537)--(15.267,9.537);
-\node[gp node right] at (2.240,9.537) {$2.05\times10^{11}$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
+\node[gp node right] at (2.240,9.537) {$2.1\times10^{11}$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
 \draw[gp path] (2.424,11.075)--(15.447,11.075);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,11.075)--(2.604,11.075);
 \draw[gp path] (15.447,11.075)--(15.267,11.075);
-\node[gp node right] at (2.240,11.075) {$2.1\times10^{11}$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
+\node[gp node right] at (2.240,11.075) {$2.15\times10^{11}$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
 \draw[gp path] (2.424,1.845)--(2.424,11.075);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,1.845)--(2.424,2.025);
 \draw[gp path] (2.424,11.075)--(2.424,10.895);
 \node[gp node left,rotate=270] at (2.424,1.661) {$0$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (4.052,1.845)--(4.052,11.075);
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (4.284,1.845)--(4.284,11.075);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (4.052,1.845)--(4.052,2.025);
-\draw[gp path] (4.052,11.075)--(4.052,10.895);
-\node[gp node left,rotate=270] at (4.052,1.661) {$50$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (5.680,1.845)--(5.680,11.075);
+\draw[gp path] (4.284,1.845)--(4.284,2.025);
+\draw[gp path] (4.284,11.075)--(4.284,10.895);
+\node[gp node left,rotate=270] at (4.284,1.661) {$50$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (6.145,1.845)--(6.145,11.075);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (5.680,1.845)--(5.680,2.025);
-\draw[gp path] (5.680,11.075)--(5.680,10.895);
-\node[gp node left,rotate=270] at (5.680,1.661) {$100$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (7.308,1.845)--(7.308,11.075);
+\draw[gp path] (6.145,1.845)--(6.145,2.025);
+\draw[gp path] (6.145,11.075)--(6.145,10.895);
+\node[gp node left,rotate=270] at (6.145,1.661) {$100$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (8.005,1.845)--(8.005,11.075);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (7.308,1.845)--(7.308,2.025);
-\draw[gp path] (7.308,11.075)--(7.308,10.895);
-\node[gp node left,rotate=270] at (7.308,1.661) {$150$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (8.936,1.845)--(8.936,11.075);
+\draw[gp path] (8.005,1.845)--(8.005,2.025);
+\draw[gp path] (8.005,11.075)--(8.005,10.895);
+\node[gp node left,rotate=270] at (8.005,1.661) {$150$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (9.866,1.845)--(9.866,11.075);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (8.936,1.845)--(8.936,2.025);
-\draw[gp path] (8.936,11.075)--(8.936,10.895);
-\node[gp node left,rotate=270] at (8.936,1.661) {$200$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (10.563,1.845)--(10.563,11.075);
+\draw[gp path] (9.866,1.845)--(9.866,2.025);
+\draw[gp path] (9.866,11.075)--(9.866,10.895);
+\node[gp node left,rotate=270] at (9.866,1.661) {$200$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (11.726,1.845)--(11.726,11.075);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (10.563,1.845)--(10.563,2.025);
-\draw[gp path] (10.563,11.075)--(10.563,10.895);
-\node[gp node left,rotate=270] at (10.563,1.661) {$250$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (12.191,1.845)--(12.191,11.075);
+\draw[gp path] (11.726,1.845)--(11.726,2.025);
+\draw[gp path] (11.726,11.075)--(11.726,10.895);
+\node[gp node left,rotate=270] at (11.726,1.661) {$250$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (13.587,1.845)--(13.587,11.075);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (12.191,1.845)--(12.191,2.025);
-\draw[gp path] (12.191,11.075)--(12.191,10.895);
-\node[gp node left,rotate=270] at (12.191,1.661) {$300$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (13.819,1.845)--(13.819,11.075);
-\gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
-\gpsetlinewidth{1.00}
-\draw[gp path] (13.819,1.845)--(13.819,2.025);
-\draw[gp path] (13.819,11.075)--(13.819,10.895);
-\node[gp node left,rotate=270] at (13.819,1.661) {$350$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
+\draw[gp path] (13.587,1.845)--(13.587,2.025);
+\draw[gp path] (13.587,11.075)--(13.587,10.895);
+\node[gp node left,rotate=270] at (13.587,1.661) {$300$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
 \draw[gp path] (15.447,1.845)--(15.447,11.075);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
 \draw[gp path] (15.447,1.845)--(15.447,2.025);
 \draw[gp path] (15.447,11.075)--(15.447,10.895);
-\node[gp node left,rotate=270] at (15.447,1.661) {$400$};
+\node[gp node left,rotate=270] at (15.447,1.661) {$350$};
 \draw[gp path] (2.424,11.075)--(2.424,1.845)--(15.447,1.845)--(15.447,11.075)--cycle;
 \gpcolor{rgb color={0.000,0.000,0.000}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,7.213)--(2.424,7.073)--(2.457,7.053)--(2.457,7.025)--(2.457,7.010)%
-  --(2.489,6.984)--(2.489,6.971)--(2.489,6.962)--(2.522,6.938)--(2.522,6.921)--(2.522,6.915)%
-  --(2.554,6.890)--(2.554,6.848)--(2.554,6.826)--(2.587,6.801)--(2.587,6.788)--(2.587,6.739)%
-  --(2.619,6.700)--(2.619,6.698)--(2.619,6.690)--(2.619,6.676)--(2.652,6.651)--(2.652,6.607)%
-  --(2.652,6.596)--(2.684,6.595)--(2.684,6.535)--(2.684,6.531)--(2.684,6.496)--(2.717,6.492)%
-  --(2.717,6.464)--(2.750,6.426)--(2.750,6.408)--(2.750,6.398)--(2.750,6.386)--(2.750,6.381)%
-  --(2.782,6.374)--(2.782,6.364)--(2.782,6.345)--(2.815,6.338)--(2.815,6.333)--(2.847,6.304)%
-  --(2.880,6.295)--(2.880,6.294)--(2.912,6.275)--(2.912,6.271)--(2.945,6.262)--(2.945,6.261)%
-  --(2.977,6.260)--(2.977,6.254)--(3.010,6.226)--(3.043,6.222)--(3.075,6.214)--(3.108,6.189)%
-  --(3.140,6.174)--(3.140,6.158)--(3.173,6.155)--(3.173,6.147)--(3.205,6.145)--(3.205,6.132)%
-  --(3.238,6.104)--(3.270,6.097)--(3.336,6.072)--(3.336,6.060)--(3.368,6.051)--(3.368,6.049)%
-  --(3.401,6.047)--(3.401,6.046)--(3.401,6.042)--(3.433,6.037)--(3.498,6.028)--(3.498,6.022)%
-  --(3.531,6.022)--(3.531,6.018)--(3.564,6.017)--(3.564,6.012)--(3.596,6.008)--(3.596,5.998)%
-  --(3.629,5.994)--(3.629,5.989)--(3.661,5.986)--(3.661,5.982)--(3.694,5.982)--(3.759,5.975)%
-  --(3.759,5.966)--(3.759,6.043)--(3.759,6.018)--(3.791,6.007)--(3.791,5.978)--(3.791,5.963)%
-  --(3.791,5.936)--(3.791,5.935)--(3.791,5.919)--(3.824,5.891)--(3.824,5.868)--(3.824,5.866)%
-  --(3.824,5.857)--(3.857,5.840)--(3.857,5.836)--(3.857,5.828)--(3.857,5.817)--(3.889,5.816)%
-  --(3.889,5.815)--(3.889,5.808)--(3.889,5.805)--(3.922,5.801)--(3.922,5.795)--(3.922,5.792)%
-  --(3.922,5.785)--(3.922,5.782)--(3.954,5.780)--(3.954,5.777)--(3.954,5.774)--(3.987,5.773)%
-  --(3.987,5.769)--(3.987,5.764)--(3.987,5.750)--(4.019,5.744)--(4.019,5.742)--(4.019,5.738)%
-  --(4.019,5.734)--(4.052,5.741)--(4.052,5.739)--(4.084,5.738)--(4.084,5.736)--(4.084,5.729)%
-  --(4.117,5.728)--(4.117,5.727)--(4.117,5.721)--(4.182,5.702)--(4.182,5.710)--(4.182,5.707)%
-  --(4.215,5.723)--(4.215,5.716)--(4.247,5.723)--(4.247,5.719)--(4.247,5.716)--(4.247,5.713)%
-  --(4.280,5.706)--(4.280,5.717)--(4.312,5.719)--(4.312,5.717)--(4.312,5.716)--(4.377,5.715)%
-  --(4.410,5.721)--(4.443,5.720)--(4.443,5.719)--(4.475,5.717)--(4.508,5.716)--(4.508,5.713)%
-  --(4.540,5.707)--(4.540,5.702)--(4.573,5.703)--(4.573,5.706)--(4.573,5.704)--(4.605,5.702)%
-  --(4.605,5.699)--(4.605,5.697)--(4.638,5.698)--(4.703,5.697)--(4.801,5.696)--(4.801,5.692)%
-  --(4.866,5.705)--(4.898,5.703)--(4.898,5.679)--(4.963,5.698)--(5.029,5.696)--(5.061,5.694)%
-  --(5.094,5.672)--(5.126,5.672)--(5.159,5.669)--(5.289,5.669)--(5.289,5.667)--(5.354,5.666)%
-  --(5.354,5.668)--(5.387,5.666)--(5.419,5.664)--(5.452,3.347)--(5.484,3.339)--(5.484,3.336)%
-  --(5.484,3.240)--(5.484,3.233)--(5.517,3.252)--(5.517,3.249)--(5.517,3.243)--(5.517,3.240)%
-  --(5.550,3.238)--(5.550,3.225)--(5.550,3.219)--(5.550,3.215)--(5.550,3.213)--(5.582,3.211)%
-  --(5.582,3.209)--(5.615,3.137)--(5.615,3.029)--(5.615,3.027)--(5.647,3.070)--(5.647,3.067)%
-  --(5.647,3.062)--(5.647,3.061)--(5.680,3.056)--(5.680,3.053)--(5.712,3.050)--(5.712,3.048)%
-  --(5.712,3.045)--(5.745,3.043)--(5.745,3.042)--(5.745,3.040)--(5.745,3.038)--(5.777,3.037)%
-  --(5.810,3.034)--(5.810,3.033)--(5.810,2.972)--(5.810,2.971)--(5.843,2.970)--(5.843,2.969)%
-  --(5.875,2.967)--(5.908,2.965)--(5.908,2.964)--(5.940,2.963)--(6.005,2.961)--(6.038,2.954)%
-  --(6.038,2.951)--(6.103,2.948)--(6.103,2.947)--(6.103,2.945)--(6.136,2.945)--(6.168,2.944)%
-  --(6.168,2.943)--(6.201,2.939)--(6.331,2.928)--(6.363,2.927)--(6.363,2.923)--(6.396,2.921)%
-  --(6.396,2.920)--(6.429,2.919)--(6.461,2.917)--(6.494,2.917)--(6.526,2.916)--(6.559,2.914)%
-  --(6.559,2.913)--(6.591,2.912)--(6.624,2.911)--(6.656,2.911)--(6.754,2.910)--(6.852,2.910)%
-  --(6.982,2.908)--(7.047,2.905)--(7.112,2.905)--(7.112,2.903)--(7.145,2.903)--(7.177,2.903)%
-  --(7.275,2.903)--(7.308,2.902)--(7.405,2.902)--(7.470,2.901)--(7.536,2.900)--(7.568,2.899)%
-  --(7.601,2.899)--(7.633,2.897)--(7.666,2.896)--(7.731,2.895)--(7.796,2.894)--(7.829,2.894)%
-  --(7.926,2.893)--(8.056,2.891)--(8.122,2.899)--(8.154,2.899)--(8.187,2.899)--(8.187,2.898)%
-  --(8.349,2.896)--(8.447,2.896)--(8.480,2.895)--(8.610,2.894)--(8.675,2.894)--(8.740,6.342)%
-  --(8.740,6.268)--(8.740,6.200)--(8.740,6.166)--(8.773,6.101)--(8.773,6.057)--(8.773,6.008)%
-  --(8.773,5.924)--(8.773,5.888)--(8.773,5.875)--(8.805,5.862)--(8.805,5.861)--(8.805,5.828)%
-  --(8.805,5.806)--(8.805,5.777)--(8.838,5.755)--(8.838,5.736)--(8.838,5.725)--(8.838,5.717)%
-  --(8.838,5.715)--(8.870,5.712)--(8.870,5.665)--(8.903,5.665)--(8.903,5.664)--(8.903,5.660)%
-  --(8.936,5.655)--(8.936,5.653)--(8.936,5.647)--(8.968,5.647)--(8.968,5.644)--(8.968,5.643)%
-  --(9.001,5.638)--(9.001,5.630)--(9.098,5.623)--(9.196,5.619)--(9.196,5.617)--(9.229,5.615)%
-  --(9.229,5.613)--(9.261,5.609)--(9.261,5.608)--(9.294,5.608)--(9.326,5.607)--(9.359,5.604)%
-  --(9.424,5.602)--(9.424,5.600)--(9.456,5.600)--(9.456,5.595)--(9.489,5.591)--(9.489,5.589)%
-  --(9.522,5.588)--(9.554,5.573)--(9.587,5.569)--(9.619,5.568)--(9.684,5.568)--(9.684,5.565)%
-  --(9.717,5.564)--(9.717,5.562)--(9.749,5.562)--(9.749,5.561)--(9.782,5.560)--(9.815,5.559)%
-  --(9.815,5.557)--(9.847,5.556)--(9.880,5.553)--(9.945,5.551)--(10.042,5.550)--(10.075,5.547)%
-  --(10.108,5.545)--(10.108,5.544)--(10.173,5.543)--(10.173,5.541)--(10.205,5.541)--(10.335,5.537)%
-  --(10.563,5.535)--(10.628,5.532)--(10.661,5.531)--(10.661,5.530)--(10.694,5.528)--(10.726,5.526)%
-  --(10.759,5.525)--(10.759,5.520)--(10.856,5.520)--(10.954,5.520)--(11.019,5.517)--(11.215,5.512)%
-  --(11.247,5.512)--(11.345,5.509)--(11.605,5.508)--(11.638,5.508)--(11.670,5.507)--(11.735,5.507)%
-  --(11.735,5.506)--(11.768,5.505)--(11.768,5.504)--(11.801,5.504)--(11.801,5.503)--(11.931,5.502)%
-  --(11.931,5.500)--(11.963,5.500)--(11.996,10.368)--(11.996,10.350)--(12.028,10.291)--(12.028,10.272)%
-  --(12.028,10.231)--(12.028,10.225)--(12.061,10.197)--(12.094,10.197)--(12.094,10.189)--(12.094,10.188)%
-  --(12.126,10.162)--(12.159,10.161)--(12.224,10.159)--(12.224,10.158)--(12.321,10.133)--(12.321,10.123)%
-  --(12.354,10.121)--(12.387,10.099)--(12.387,10.094)--(12.484,10.087)--(12.712,10.085)--(12.842,10.082)%
-  --(13.363,10.081)--(13.884,10.081);
+\draw[gp path] (2.424,6.805)--(2.424,6.754)--(2.424,6.729)--(2.424,6.691)--(2.424,6.636)%
+  --(2.424,6.597)--(2.424,6.587)--(2.424,6.521)--(2.424,6.499)--(2.461,6.455)--(2.461,6.405)%
+  --(2.461,6.398)--(2.461,6.383)--(2.461,6.355)--(2.461,6.332)--(2.461,6.324)--(2.461,6.309)%
+  --(2.461,6.292)--(2.461,6.283)--(2.461,6.273)--(2.498,6.261)--(2.498,6.248)--(2.498,6.241)%
+  --(2.498,6.204)--(2.498,6.136)--(2.498,6.133)--(2.498,6.114)--(2.498,6.089)--(2.498,6.085)%
+  --(2.498,6.065)--(2.498,6.048)--(2.498,6.047)--(2.536,6.039)--(2.536,6.037)--(2.536,6.031)%
+  --(2.536,6.018)--(2.536,6.009)--(2.536,6.007)--(2.573,6.002)--(2.573,6.000)--(2.573,5.997)%
+  --(2.573,5.992)--(2.573,5.990)--(2.573,5.988)--(2.573,5.978)--(2.573,5.973)--(2.573,5.968)%
+  --(2.573,5.929)--(2.610,5.916)--(2.610,5.915)--(2.610,5.911)--(2.610,5.895)--(2.610,5.890)%
+  --(2.610,5.884)--(2.610,5.880)--(2.610,5.879)--(2.610,5.859)--(2.647,5.851)--(2.647,5.838)%
+  --(2.647,5.834)--(2.647,5.823)--(2.647,5.816)--(2.684,5.808)--(2.684,5.800)--(2.684,5.787)%
+  --(2.684,5.770)--(2.684,5.764)--(2.722,5.759)--(2.722,5.753)--(2.722,5.752)--(2.722,5.748)%
+  --(2.722,5.740)--(2.722,5.737)--(2.722,5.717)--(2.722,5.715)--(2.759,5.712)--(2.759,5.707)%
+  --(2.759,5.701)--(2.759,5.700)--(2.759,5.698)--(2.759,5.691)--(2.759,5.689)--(2.796,5.687)%
+  --(2.796,5.682)--(2.796,5.681)--(2.796,5.679)--(2.796,5.675)--(2.833,5.675)--(2.833,5.674)%
+  --(2.833,5.669)--(2.833,5.663)--(2.833,5.660)--(2.833,5.659)--(2.871,5.654)--(2.871,5.649)%
+  --(2.908,5.643)--(2.908,5.639)--(2.908,5.638)--(2.908,5.637)--(2.908,5.630)--(2.945,5.629)%
+  --(2.945,5.623)--(2.945,5.622)--(2.945,5.619)--(2.982,5.619)--(2.982,5.617)--(2.982,5.614)%
+  --(2.982,5.611)--(3.019,5.610)--(3.019,5.609)--(3.019,5.600)--(3.019,5.592)--(3.057,5.584)%
+  --(3.057,5.578)--(3.057,5.571)--(3.094,5.568)--(3.094,5.558)--(3.094,5.549)--(3.094,5.547)%
+  --(3.094,5.546)--(3.131,5.546)--(3.131,5.545)--(3.168,5.545)--(3.168,5.542)--(3.168,5.540)%
+  --(3.168,5.532)--(3.168,5.529)--(3.168,5.525)--(3.168,5.516)--(3.205,5.509)--(3.205,5.507)%
+  --(3.243,5.506)--(3.243,5.505)--(3.243,5.502)--(3.243,5.493)--(3.280,5.491)--(3.280,5.490)%
+  --(3.317,5.486)--(3.317,5.484)--(3.317,5.476)--(3.354,5.475)--(3.354,5.473)--(3.354,5.467)%
+  --(3.391,5.460)--(3.391,5.457)--(3.429,5.455)--(3.429,5.449)--(3.429,5.448)--(3.429,5.446)%
+  --(3.466,5.446)--(3.540,5.446)--(3.540,5.445)--(3.577,5.444)--(3.615,5.442)--(3.615,5.439)%
+  --(3.689,5.439)--(3.689,5.437)--(3.726,5.436)--(3.726,5.435)--(3.726,5.434)--(3.726,5.432)%
+  --(3.764,5.432)--(3.838,5.427)--(3.875,5.427)--(3.912,5.426)--(3.950,5.424)--(3.950,5.423)%
+  --(3.950,5.422)--(3.987,5.418)--(4.136,5.418)--(4.210,5.418)--(4.322,5.415)--(4.359,5.415)%
+  --(4.359,5.414)--(4.433,5.411)--(4.508,5.409)--(4.545,5.407)--(4.545,5.403)--(4.619,5.402)%
+  --(4.657,5.401)--(4.694,5.396)--(4.731,5.393)--(4.731,5.392)--(4.768,5.390)--(4.768,5.389)%
+  --(4.880,5.386)--(4.954,5.383)--(5.029,5.380)--(5.103,5.380)--(5.140,5.377)--(5.140,5.373)%
+  --(5.326,5.372)--(5.363,5.372)--(5.363,5.369)--(5.438,5.365)--(5.512,5.364)--(5.661,5.362)%
+  --(5.661,5.359)--(5.698,5.357)--(5.736,5.357)--(5.773,5.354)--(5.810,5.354)--(5.810,5.353)%
+  --(5.847,5.349)--(5.847,5.347)--(5.884,5.345)--(5.922,5.344)--(5.959,5.344)--(5.996,5.344)%
+  --(6.145,5.341)--(6.182,5.337)--(6.182,4.013)--(6.182,3.998)--(6.182,3.870)--(6.219,3.867)%
+  --(6.219,3.860)--(6.219,3.841)--(6.219,3.818)--(6.219,3.792)--(6.219,3.761)--(6.219,3.743)%
+  --(6.219,3.740)--(6.219,3.727)--(6.219,3.721)--(6.219,3.711)--(6.219,3.704)--(6.219,3.695)%
+  --(6.256,3.691)--(6.256,3.689)--(6.256,3.675)--(6.256,3.672)--(6.256,3.592)--(6.256,3.582)%
+  --(6.256,3.473)--(6.256,3.465)--(6.256,3.401)--(6.256,3.371)--(6.294,3.329)--(6.294,3.328)%
+  --(6.294,3.325)--(6.294,3.236)--(6.294,3.233)--(6.294,3.225)--(6.294,3.222)--(6.331,3.219)%
+  --(6.331,3.146)--(6.331,3.144)--(6.331,3.139)--(6.331,3.131)--(6.331,3.124)--(6.331,3.118)%
+  --(6.331,3.116)--(6.368,3.108)--(6.368,3.106)--(6.368,3.105)--(6.368,3.102)--(6.368,2.951)%
+  --(6.368,2.941)--(6.368,2.930)--(6.368,2.928)--(6.368,2.925)--(6.405,2.920)--(6.405,2.919)%
+  --(6.405,2.916)--(6.405,2.914)--(6.405,2.912)--(6.443,2.912)--(6.443,2.911)--(6.443,2.907)%
+  --(6.443,2.903)--(6.443,2.891)--(6.443,2.883)--(6.480,2.883)--(6.480,2.874)--(6.517,2.873)%
+  --(6.517,2.867)--(6.517,2.863)--(6.517,2.751)--(6.517,2.731)--(6.517,2.730)--(6.517,2.729)%
+  --(6.517,2.727)--(6.517,2.725)--(6.554,2.724)--(6.554,2.723)--(6.554,2.722)--(6.554,2.721)%
+  --(6.591,2.720)--(6.591,2.708)--(6.591,2.706)--(6.591,2.705)--(6.591,2.704)--(6.591,2.701)%
+  --(6.591,2.696)--(6.629,2.695)--(6.629,2.692)--(6.629,2.691)--(6.666,2.689)--(6.666,2.680)%
+  --(6.703,2.679)--(6.740,2.675)--(6.740,2.672)--(6.777,2.669)--(6.777,2.668)--(6.815,2.588)%
+  --(6.815,2.584)--(6.815,2.583)--(6.815,2.579)--(6.852,2.577)--(6.852,2.574)--(6.889,2.568)%
+  --(6.889,2.565)--(6.889,2.563)--(6.889,2.561)--(6.889,2.559)--(6.889,2.557)--(6.926,2.557)%
+  --(6.926,2.556)--(6.926,2.554)--(6.926,2.551)--(6.963,2.547)--(7.001,2.545)--(7.001,2.544)%
+  --(7.001,2.542)--(7.038,2.537)--(7.075,2.534)--(7.075,2.532)--(7.112,2.530)--(7.112,2.525)%
+  --(7.187,2.521)--(7.187,2.519)--(7.224,2.519)--(7.224,2.517)--(7.298,2.514)--(7.410,2.512)%
+  --(7.522,2.512)--(7.596,2.509)--(7.633,2.507)--(7.670,2.507)--(7.670,2.506)--(7.708,2.506)%
+  --(7.708,2.505)--(7.745,2.501)--(7.745,2.500)--(7.819,2.499)--(7.819,2.498)--(7.856,2.496)%
+  --(7.894,2.496)--(7.894,2.495)--(7.894,2.494)--(7.931,2.493)--(7.968,2.493)--(8.005,2.492)%
+  --(8.005,2.491)--(8.042,2.489)--(8.042,2.488)--(8.117,2.488)--(8.117,2.485)--(8.154,2.484)%
+  --(8.191,2.482)--(8.229,2.482)--(8.229,2.479)--(8.229,2.478)--(8.229,2.477)--(8.266,2.475)%
+  --(8.266,2.473)--(8.303,2.473)--(8.340,2.472)--(8.340,2.471)--(8.377,2.470)--(8.489,2.469)%
+  --(8.489,2.467)--(8.526,2.466)--(8.563,2.466)--(8.601,2.466)--(8.675,2.465)--(8.712,2.465)%
+  --(8.712,2.463)--(8.787,2.460)--(8.787,2.459)--(8.824,2.458)--(8.824,2.457)--(8.898,2.456)%
+  --(9.010,2.455)--(9.122,2.455)--(9.270,2.452)--(9.345,2.450)--(9.382,2.450)--(9.419,2.448)%
+  --(9.456,2.447)--(9.642,2.445)--(9.680,2.444)--(9.940,6.138)--(9.940,6.088)--(9.940,6.017)%
+  --(9.940,5.947)--(9.940,5.840)--(9.940,5.810)--(9.940,5.735)--(9.940,5.703)--(9.940,5.634)%
+  --(9.940,5.586)--(9.940,5.557)--(9.940,5.522)--(9.977,5.499)--(9.977,5.475)--(9.977,5.450)%
+  --(9.977,5.426)--(9.977,5.412)--(9.977,5.381)--(9.977,5.361)--(9.977,5.359)--(9.977,5.337)%
+  --(9.977,5.332)--(9.977,5.267)--(10.015,5.262)--(10.015,5.246)--(10.015,5.236)--(10.015,5.235)%
+  --(10.015,5.217)--(10.052,5.209)--(10.052,5.188)--(10.052,5.178)--(10.052,5.157)--(10.052,5.156)%
+  --(10.089,5.145)--(10.089,5.127)--(10.089,5.123)--(10.089,5.121)--(10.089,5.106)--(10.089,5.084)%
+  --(10.089,5.071)--(10.089,5.066)--(10.126,5.059)--(10.126,5.056)--(10.126,5.054)--(10.126,5.045)%
+  --(10.126,5.034)--(10.163,5.033)--(10.163,5.028)--(10.163,5.025)--(10.163,5.022)--(10.201,5.018)%
+  --(10.201,5.008)--(10.201,4.996)--(10.201,4.992)--(10.201,4.990)--(10.201,4.978)--(10.201,4.969)%
+  --(10.238,4.966)--(10.238,4.964)--(10.238,4.962)--(10.238,4.953)--(10.275,4.947)--(10.275,4.942)%
+  --(10.312,4.941)--(10.312,4.939)--(10.312,4.936)--(10.312,4.935)--(10.349,4.932)--(10.349,4.928)%
+  --(10.387,4.923)--(10.387,4.915)--(10.387,4.906)--(10.387,4.899)--(10.461,4.896)--(10.461,4.890)%
+  --(10.461,4.885)--(10.461,4.882)--(10.498,4.881)--(10.498,4.874)--(10.684,4.873)--(10.722,4.872)%
+  --(10.759,4.871)--(10.759,4.870)--(10.759,4.864)--(10.759,4.857)--(10.759,4.856)--(10.796,4.856)%
+  --(10.833,4.855)--(10.833,4.853)--(10.870,4.851)--(10.870,4.847)--(10.908,4.841)--(10.945,4.840)%
+  --(11.019,4.839)--(11.019,4.838)--(11.056,4.827)--(11.056,4.826)--(11.094,4.824)--(11.131,4.818)%
+  --(11.131,4.813)--(11.168,4.812)--(11.168,4.811)--(11.205,4.799)--(11.242,4.797)--(11.242,4.796)%
+  --(11.428,4.791)--(11.503,4.791)--(11.503,4.790)--(11.540,4.789)--(11.540,4.788)--(11.577,4.787)%
+  --(11.577,4.784)--(11.615,4.781)--(11.615,4.777)--(11.652,4.776)--(11.652,4.775)--(11.689,4.774)%
+  --(11.726,4.774)--(11.763,4.773)--(11.763,4.771)--(11.801,4.770)--(11.875,4.769)--(11.949,4.768)%
+  --(12.024,4.765)--(12.024,4.761)--(12.284,4.760)--(12.433,4.758)--(12.470,4.756)--(12.545,4.753)%
+  --(12.768,4.753)--(12.805,4.752)--(12.805,4.751)--(12.842,4.742)--(12.880,4.742)--(12.954,4.742)%
+  --(12.954,4.740)--(12.991,4.739)--(12.991,4.738)--(12.991,4.737)--(13.066,4.735)--(13.103,4.733)%
+  --(13.140,4.732)--(13.214,4.731)--(13.214,4.729)--(13.252,4.728)--(13.252,4.725)--(13.326,4.721)%
+  --(13.401,4.719)--(13.438,4.718)--(13.438,4.713)--(13.475,4.709)--(13.512,4.708)--(13.587,4.706)%
+  --(13.624,4.705)--(13.661,10.086)--(13.661,10.075)--(13.698,10.068)--(13.773,10.058)--(13.773,10.054)%
+  --(13.810,10.048)--(14.070,10.045)--(15.187,10.039);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,11.075)--(2.424,1.845)--(15.447,1.845)--(15.447,11.075)--cycle;
