--- a/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_weight_change_plot.tex
+++ b/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_weight_change_plot.tex
@@ -1,213 +1,224 @@
 \tikzpicture[gnuplot]
 %% generated with GNUPLOT 6.0p1 (Lua 5.2; terminal rev. Jun 2020, script rev. 118)
-%% Tue 17 Dec 2024 02:51:05 PM UTC
+%% tir 17 dec 2024 22:52:05 CET
 \path (0.000,0.000) rectangle (16.000,12.000);
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.608,1.477)--(15.447,1.477);
+\draw[gp path] (2.424,1.845)--(15.447,1.845);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.608,1.477)--(2.788,1.477);
-\draw[gp path] (15.447,1.477)--(15.267,1.477);
-\node[gp node right] at (2.424,1.477) {$1.925\times10^{11}$};
+\draw[gp path] (2.424,1.845)--(2.604,1.845);
+\draw[gp path] (15.447,1.845)--(15.267,1.845);
+\node[gp node right] at (2.240,1.845) {$1.95\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.608,2.350)--(15.447,2.350);
+\draw[gp path] (2.424,2.871)--(15.447,2.871);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.608,2.350)--(2.788,2.350);
-\draw[gp path] (15.447,2.350)--(15.267,2.350);
-\node[gp node right] at (2.424,2.350) {$1.93\times10^{11}$};
+\draw[gp path] (2.424,2.871)--(2.604,2.871);
+\draw[gp path] (15.447,2.871)--(15.267,2.871);
+\node[gp node right] at (2.240,2.871) {$2\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.608,3.222)--(15.447,3.222);
+\draw[gp path] (2.424,3.896)--(15.447,3.896);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.608,3.222)--(2.788,3.222);
-\draw[gp path] (15.447,3.222)--(15.267,3.222);
-\node[gp node right] at (2.424,3.222) {$1.935\times10^{11}$};
+\draw[gp path] (2.424,3.896)--(2.604,3.896);
+\draw[gp path] (15.447,3.896)--(15.267,3.896);
+\node[gp node right] at (2.240,3.896) {$2.05\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.608,4.095)--(15.447,4.095);
+\draw[gp path] (2.424,4.922)--(15.447,4.922);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.608,4.095)--(2.788,4.095);
-\draw[gp path] (15.447,4.095)--(15.267,4.095);
-\node[gp node right] at (2.424,4.095) {$1.94\times10^{11}$};
+\draw[gp path] (2.424,4.922)--(2.604,4.922);
+\draw[gp path] (15.447,4.922)--(15.267,4.922);
+\node[gp node right] at (2.240,4.922) {$2.1\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.608,4.967)--(15.447,4.967);
+\draw[gp path] (2.424,5.947)--(15.447,5.947);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.608,4.967)--(2.788,4.967);
-\draw[gp path] (15.447,4.967)--(15.267,4.967);
-\node[gp node right] at (2.424,4.967) {$1.945\times10^{11}$};
+\draw[gp path] (2.424,5.947)--(2.604,5.947);
+\draw[gp path] (15.447,5.947)--(15.267,5.947);
+\node[gp node right] at (2.240,5.947) {$2.15\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.608,5.840)--(15.447,5.840);
+\draw[gp path] (2.424,6.973)--(15.447,6.973);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.608,5.840)--(2.788,5.840);
-\draw[gp path] (15.447,5.840)--(15.267,5.840);
-\node[gp node right] at (2.424,5.840) {$1.95\times10^{11}$};
+\draw[gp path] (2.424,6.973)--(2.604,6.973);
+\draw[gp path] (15.447,6.973)--(15.267,6.973);
+\node[gp node right] at (2.240,6.973) {$2.2\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.608,6.712)--(15.447,6.712);
+\draw[gp path] (2.424,7.998)--(15.447,7.998);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.608,6.712)--(2.788,6.712);
-\draw[gp path] (15.447,6.712)--(15.267,6.712);
-\node[gp node right] at (2.424,6.712) {$1.955\times10^{11}$};
+\draw[gp path] (2.424,7.998)--(2.604,7.998);
+\draw[gp path] (15.447,7.998)--(15.267,7.998);
+\node[gp node right] at (2.240,7.998) {$2.25\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.608,7.585)--(15.447,7.585);
+\draw[gp path] (2.424,9.024)--(15.447,9.024);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.608,7.585)--(2.788,7.585);
-\draw[gp path] (15.447,7.585)--(15.267,7.585);
-\node[gp node right] at (2.424,7.585) {$1.96\times10^{11}$};
+\draw[gp path] (2.424,9.024)--(2.604,9.024);
+\draw[gp path] (15.447,9.024)--(15.267,9.024);
+\node[gp node right] at (2.240,9.024) {$2.3\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.608,8.457)--(15.447,8.457);
+\draw[gp path] (2.424,10.049)--(15.447,10.049);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.608,8.457)--(2.788,8.457);
-\draw[gp path] (15.447,8.457)--(15.267,8.457);
-\node[gp node right] at (2.424,8.457) {$1.965\times10^{11}$};
+\draw[gp path] (2.424,10.049)--(2.604,10.049);
+\draw[gp path] (15.447,10.049)--(15.267,10.049);
+\node[gp node right] at (2.240,10.049) {$2.35\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.608,9.330)--(15.447,9.330);
+\draw[gp path] (2.424,11.075)--(15.447,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.608,9.330)--(2.788,9.330);
-\draw[gp path] (15.447,9.330)--(15.267,9.330);
-\node[gp node right] at (2.424,9.330) {$1.97\times10^{11}$};
-\gpcolor{rgb color={0.753,0.753,0.753}}
-\gpsetlinewidth{2.00}
-\draw[gp path] (2.608,10.202)--(15.447,10.202);
-\gpcolor{color=gp lt color border}
-\gpsetlinewidth{1.00}
-\draw[gp path] (2.608,10.202)--(2.788,10.202);
-\draw[gp path] (15.447,10.202)--(15.267,10.202);
-\node[gp node right] at (2.424,10.202) {$1.975\times10^{11}$};
-\gpcolor{rgb color={0.753,0.753,0.753}}
-\gpsetlinewidth{2.00}
-\draw[gp path] (2.608,11.075)--(15.447,11.075);
-\gpcolor{color=gp lt color border}
-\gpsetlinewidth{1.00}
-\draw[gp path] (2.608,11.075)--(2.788,11.075);
+\draw[gp path] (2.424,11.075)--(2.604,11.075);
 \draw[gp path] (15.447,11.075)--(15.267,11.075);
-\node[gp node right] at (2.424,11.075) {$1.98\times10^{11}$};
+\node[gp node right] at (2.240,11.075) {$2.4\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.608,1.477)--(2.608,11.075);
+\draw[gp path] (2.424,1.845)--(2.424,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.608,1.477)--(2.608,1.657);
-\draw[gp path] (2.608,11.075)--(2.608,10.895);
-\node[gp node left,rotate=270] at (2.608,1.293) {$0$};
+\draw[gp path] (2.424,1.845)--(2.424,2.025);
+\draw[gp path] (2.424,11.075)--(2.424,10.895);
+\node[gp node left,rotate=270] at (2.424,1.661) {$0$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (4.213,1.477)--(4.213,11.075);
+\draw[gp path] (4.052,1.845)--(4.052,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (4.213,1.477)--(4.213,1.657);
-\draw[gp path] (4.213,11.075)--(4.213,10.895);
-\node[gp node left,rotate=270] at (4.213,1.293) {$1$};
+\draw[gp path] (4.052,1.845)--(4.052,2.025);
+\draw[gp path] (4.052,11.075)--(4.052,10.895);
+\node[gp node left,rotate=270] at (4.052,1.661) {$50$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (5.818,1.477)--(5.818,11.075);
+\draw[gp path] (5.680,1.845)--(5.680,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (5.818,1.477)--(5.818,1.657);
-\draw[gp path] (5.818,11.075)--(5.818,10.895);
-\node[gp node left,rotate=270] at (5.818,1.293) {$2$};
+\draw[gp path] (5.680,1.845)--(5.680,2.025);
+\draw[gp path] (5.680,11.075)--(5.680,10.895);
+\node[gp node left,rotate=270] at (5.680,1.661) {$100$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (7.423,1.477)--(7.423,11.075);
+\draw[gp path] (7.308,1.845)--(7.308,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (7.423,1.477)--(7.423,1.657);
-\draw[gp path] (7.423,11.075)--(7.423,10.895);
-\node[gp node left,rotate=270] at (7.423,1.293) {$3$};
+\draw[gp path] (7.308,1.845)--(7.308,2.025);
+\draw[gp path] (7.308,11.075)--(7.308,10.895);
+\node[gp node left,rotate=270] at (7.308,1.661) {$150$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (9.028,1.477)--(9.028,11.075);
+\draw[gp path] (8.936,1.845)--(8.936,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (9.028,1.477)--(9.028,1.657);
-\draw[gp path] (9.028,11.075)--(9.028,10.895);
-\node[gp node left,rotate=270] at (9.028,1.293) {$4$};
+\draw[gp path] (8.936,1.845)--(8.936,2.025);
+\draw[gp path] (8.936,11.075)--(8.936,10.895);
+\node[gp node left,rotate=270] at (8.936,1.661) {$200$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (10.632,1.477)--(10.632,11.075);
+\draw[gp path] (10.563,1.845)--(10.563,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (10.632,1.477)--(10.632,1.657);
-\draw[gp path] (10.632,11.075)--(10.632,10.895);
-\node[gp node left,rotate=270] at (10.632,1.293) {$5$};
+\draw[gp path] (10.563,1.845)--(10.563,2.025);
+\draw[gp path] (10.563,11.075)--(10.563,10.895);
+\node[gp node left,rotate=270] at (10.563,1.661) {$250$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (12.237,1.477)--(12.237,11.075);
+\draw[gp path] (12.191,1.845)--(12.191,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (12.237,1.477)--(12.237,1.657);
-\draw[gp path] (12.237,11.075)--(12.237,10.895);
-\node[gp node left,rotate=270] at (12.237,1.293) {$6$};
+\draw[gp path] (12.191,1.845)--(12.191,2.025);
+\draw[gp path] (12.191,11.075)--(12.191,10.895);
+\node[gp node left,rotate=270] at (12.191,1.661) {$300$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (13.842,1.477)--(13.842,11.075);
+\draw[gp path] (13.819,1.845)--(13.819,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (13.842,1.477)--(13.842,1.657);
-\draw[gp path] (13.842,11.075)--(13.842,10.895);
-\node[gp node left,rotate=270] at (13.842,1.293) {$7$};
+\draw[gp path] (13.819,1.845)--(13.819,2.025);
+\draw[gp path] (13.819,11.075)--(13.819,10.895);
+\node[gp node left,rotate=270] at (13.819,1.661) {$350$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (15.447,1.477)--(15.447,11.075);
+\draw[gp path] (15.447,1.845)--(15.447,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (15.447,1.477)--(15.447,1.657);
+\draw[gp path] (15.447,1.845)--(15.447,2.025);
 \draw[gp path] (15.447,11.075)--(15.447,10.895);
-\node[gp node left,rotate=270] at (15.447,1.293) {$8$};
-\draw[gp path] (2.608,11.075)--(2.608,1.477)--(15.447,1.477)--(15.447,11.075)--cycle;
+\node[gp node left,rotate=270] at (15.447,1.661) {$400$};
+\draw[gp path] (2.424,11.075)--(2.424,1.845)--(15.447,1.845)--(15.447,11.075)--cycle;
 \gpcolor{rgb color={0.000,0.000,0.000}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.608,10.793)--(2.608,10.562)--(2.608,10.404)--(2.608,10.016)--(2.608,9.965)%
-  --(2.608,9.945)--(2.608,9.744)--(2.608,9.593)--(2.608,9.540)--(2.608,9.509)--(2.608,9.195)%
-  --(2.608,8.965)--(2.608,8.896)--(2.608,8.848)--(2.608,8.618)--(2.608,8.409)--(2.608,8.277)%
-  --(2.608,8.162)--(2.608,8.086)--(2.608,7.901)--(2.608,7.840)--(2.608,7.781)--(2.608,7.412)%
-  --(2.608,7.373)--(2.608,7.356)--(2.608,6.920)--(2.608,6.791)--(2.608,6.769)--(2.608,6.753)%
-  --(2.608,6.681)--(2.608,6.490)--(2.608,6.439)--(2.608,6.404)--(2.608,6.397)--(2.608,6.391)%
-  --(4.213,6.238)--(4.213,6.151)--(4.213,6.129)--(4.213,6.009)--(4.213,6.007)--(4.213,5.933)%
-  --(4.213,5.807)--(4.213,5.751)--(4.213,5.733)--(4.213,5.686)--(4.213,5.678)--(4.213,5.606)%
-  --(4.213,5.532)--(4.213,5.410)--(4.213,5.162)--(4.213,5.116)--(4.213,5.108)--(4.213,5.075)%
-  --(4.213,4.999)--(4.213,4.817)--(4.213,4.776)--(4.213,4.691)--(4.213,4.676)--(4.213,4.661)%
-  --(4.213,4.460)--(4.213,4.401)--(4.213,4.372)--(4.213,4.369)--(4.213,4.327)--(4.213,4.292)%
-  --(4.213,4.259)--(4.213,4.242)--(4.213,4.139)--(4.213,4.104)--(4.213,4.087)--(4.213,4.082)%
-  --(4.213,4.046)--(4.213,3.954)--(4.213,3.928)--(4.213,3.878)--(4.213,3.814)--(5.818,3.797)%
-  --(5.818,3.773)--(5.818,3.752)--(5.818,3.704)--(5.818,3.657)--(5.818,3.632)--(5.818,3.588)%
-  --(5.818,3.530)--(5.818,3.514)--(5.818,3.491)--(5.818,3.478)--(5.818,3.413)--(5.818,3.389)%
-  --(5.818,3.292)--(5.818,3.251)--(5.818,3.202)--(5.818,3.182)--(5.818,3.145)--(5.818,3.139)%
-  --(5.818,3.108)--(5.818,3.097)--(7.423,3.092)--(7.423,3.091)--(7.423,3.074)--(7.423,3.051)%
-  --(7.423,3.043)--(7.423,3.028)--(7.423,3.023)--(7.423,3.013)--(7.423,2.938)--(7.423,2.903)%
-  --(7.423,2.891)--(7.423,2.878)--(7.423,2.853)--(7.423,2.845)--(9.028,2.806)--(9.028,2.779)%
-  --(9.028,2.750)--(9.028,2.700)--(9.028,2.692)--(9.028,2.691)--(9.028,2.640)--(9.028,2.587)%
-  --(10.632,2.544)--(10.632,2.528)--(10.632,2.511)--(10.632,2.459)--(10.632,2.451)--(10.632,2.447)%
-  --(10.632,2.438)--(10.632,2.406)--(10.632,2.394)--(10.632,2.386)--(10.632,2.378)--(12.237,2.343)%
-  --(12.237,2.342)--(12.237,2.330)--(12.237,2.325)--(12.237,2.314)--(12.237,2.313)--(12.237,2.307)%
-  --(12.237,2.294)--(12.237,2.278)--(12.237,2.270)--(12.237,2.248)--(12.237,2.241)--(12.237,2.231)%
-  --(12.237,2.230)--(12.237,2.221)--(12.237,2.201)--(13.842,2.187)--(13.842,2.175)--(13.842,2.165)%
-  --(15.447,2.165)--(15.447,2.157)--(15.447,2.150)--(15.447,2.149)--(15.447,2.139)--(15.447,2.129);
+\draw[gp path] (2.424,3.082)--(2.424,3.047)--(2.457,2.990)--(2.457,2.987)--(2.457,2.955)%
+  --(2.457,2.900)--(2.457,2.888)--(2.457,2.873)--(2.457,2.849)--(2.457,2.845)--(2.457,2.836)%
+  --(2.457,2.816)--(2.457,2.803)--(2.489,2.802)--(2.489,2.786)--(2.489,2.770)--(2.489,2.764)%
+  --(2.489,2.752)--(2.489,2.742)--(2.489,2.731)--(2.489,2.715)--(2.489,2.714)--(2.489,2.686)%
+  --(2.489,2.673)--(2.489,2.667)--(2.522,2.659)--(2.522,2.654)--(2.522,2.643)--(2.522,2.640)%
+  --(2.522,2.627)--(2.522,2.617)--(2.522,2.616)--(2.522,2.609)--(2.522,2.608)--(2.522,2.598)%
+  --(2.522,2.592)--(2.522,2.576)--(2.554,2.576)--(2.554,2.571)--(2.554,2.567)--(2.554,2.558)%
+  --(2.554,2.554)--(2.554,2.553)--(2.554,2.546)--(2.554,2.539)--(2.554,2.534)--(2.554,2.526)%
+  --(2.587,2.526)--(2.587,2.524)--(2.587,2.522)--(2.587,2.520)--(2.587,2.513)--(2.587,2.511)%
+  --(2.587,2.506)--(2.587,2.500)--(2.587,2.497)--(2.619,2.495)--(2.619,2.493)--(2.619,2.485)%
+  --(2.619,2.484)--(2.619,2.482)--(2.619,2.481)--(2.619,2.475)--(2.652,2.474)--(2.652,2.473)%
+  --(2.652,2.467)--(2.652,2.464)--(2.652,2.454)--(2.652,2.450)--(2.652,2.435)--(2.684,2.431)%
+  --(2.684,2.423)--(2.684,2.420)--(2.684,2.417)--(2.684,2.401)--(2.717,2.394)--(2.717,2.393)%
+  --(2.717,2.392)--(2.717,2.384)--(2.717,2.383)--(2.717,2.376)--(2.717,2.372)--(2.717,2.369)%
+  --(2.750,2.369)--(2.750,2.368)--(2.750,2.364)--(2.750,2.363)--(2.750,2.355)--(2.782,2.353)%
+  --(2.782,2.352)--(2.782,2.350)--(2.782,2.349)--(2.815,2.348)--(2.815,2.346)--(2.815,2.343)%
+  --(2.815,2.342)--(2.815,2.338)--(2.815,2.337)--(2.815,2.335)--(2.847,2.332)--(2.847,2.327)%
+  --(2.847,2.323)--(2.847,2.319)--(2.847,2.315)--(2.847,2.311)--(2.880,2.309)--(2.880,2.307)%
+  --(2.912,2.307)--(2.912,2.306)--(2.912,2.302)--(2.945,2.296)--(2.945,2.295)--(2.945,2.290)%
+  --(2.945,2.286)--(2.945,2.285)--(2.977,2.284)--(2.977,2.283)--(3.010,2.278)--(3.010,2.277)%
+  --(3.043,2.275)--(3.043,2.267)--(3.043,2.262)--(3.108,2.255)--(3.108,2.254)--(3.108,2.253)%
+  --(3.108,2.251)--(3.140,2.251)--(3.140,2.250)--(3.173,2.247)--(3.173,2.245)--(3.205,2.244)%
+  --(3.205,2.242)--(3.238,2.241)--(3.238,2.240)--(3.238,2.238)--(3.270,2.237)--(3.270,2.235)%
+  --(3.270,2.231)--(3.303,2.231)--(3.336,2.229)--(3.336,2.228)--(3.336,2.226)--(3.368,2.226)%
+  --(3.368,2.223)--(3.368,2.219)--(3.433,2.219)--(3.466,2.218)--(3.466,2.217)--(3.498,2.216)%
+  --(3.498,2.215)--(3.498,2.214)--(3.498,2.212)--(3.531,2.210)--(3.531,2.209)--(3.564,2.207)%
+  --(3.564,2.204)--(3.596,2.204)--(3.596,2.203)--(3.629,2.176)--(3.629,2.175)--(3.661,2.175)%
+  --(3.661,2.174)--(3.694,2.171)--(3.694,2.170)--(3.726,2.167)--(3.726,2.126)--(3.726,2.125)%
+  --(3.759,2.121)--(3.791,2.121)--(3.791,2.117)--(3.791,2.114)--(3.824,2.114)--(3.857,2.112)%
+  --(3.857,2.109)--(3.889,2.107)--(3.889,2.106)--(3.889,2.105)--(3.889,2.104)--(3.922,2.104)%
+  --(3.922,2.101)--(3.954,2.100)--(3.954,2.099)--(3.987,2.097)--(3.987,2.096)--(4.019,2.094)%
+  --(4.084,2.091)--(4.084,2.090)--(4.150,2.088)--(4.215,2.087)--(4.345,2.085)--(4.377,2.083)%
+  --(4.410,2.082)--(4.410,2.081)--(4.475,3.051)--(4.475,3.050)--(4.703,3.049)--(4.736,3.046)%
+  --(4.768,3.043)--(4.833,3.041)--(4.931,3.040)--(4.931,3.038)--(4.931,3.037)--(5.029,3.035)%
+  --(5.061,3.034)--(5.094,3.034)--(5.126,3.030)--(5.126,3.029)--(5.191,3.028)--(5.289,3.028)%
+  --(5.322,3.028)--(5.322,3.027)--(5.354,3.027)--(5.387,3.027)--(5.419,3.025)--(5.419,3.022)%
+  --(5.615,3.022)--(5.615,3.021)--(5.647,3.018)--(5.680,3.018)--(5.712,3.018)--(5.712,3.016)%
+  --(5.777,3.016)--(5.777,3.015)--(5.843,3.013)--(5.908,3.012)--(6.070,3.012)--(6.136,3.011)%
+  --(6.168,3.011)--(6.363,3.010)--(6.363,3.009)--(6.363,3.008)--(6.396,4.436)--(6.429,4.435)%
+  --(6.461,4.434)--(6.526,4.434)--(6.624,4.433)--(6.819,4.432)--(6.852,4.432)--(6.949,4.432)%
+  --(7.015,4.431)--(7.015,4.430)--(7.015,4.429)--(7.047,4.429)--(7.177,4.429)--(7.308,4.427)%
+  --(7.340,4.426)--(7.438,4.425)--(7.438,4.424)--(7.470,4.424)--(7.536,4.423)--(7.666,4.421)%
+  --(7.763,4.421)--(7.796,4.420)--(7.829,4.420)--(8.122,4.419)--(8.187,4.419)--(8.252,4.418)%
+  --(8.317,4.418)--(8.382,5.159)--(8.675,5.159)--(8.740,5.158)--(8.773,5.158)--(8.773,5.157)%
+  --(8.805,5.156)--(8.805,5.154)--(8.838,5.154)--(8.903,5.154)--(8.936,5.153)--(9.001,5.152)%
+  --(9.033,5.151)--(9.554,5.150)--(9.782,5.150)--(9.815,5.148)--(9.815,5.147)--(9.912,5.146)%
+  --(9.945,5.145)--(10.075,5.143)--(10.108,5.140)--(10.368,7.955)--(10.628,7.953)--(10.759,7.951)%
+  --(10.889,7.950)--(10.922,7.950)--(11.117,7.949)--(11.149,7.947)--(11.247,7.946)--(11.377,7.946)%
+  --(11.442,7.943)--(11.540,7.942)--(11.638,7.942)--(11.703,7.942)--(11.735,7.941)--(11.735,7.940)%
+  --(11.898,7.940)--(11.898,7.939)--(11.931,7.936)--(11.963,7.934)--(12.094,7.934)--(12.256,10.557)%
+  --(12.419,10.556)--(12.484,10.555)--(12.517,10.554)--(12.549,10.553)--(12.614,10.552)--(12.647,10.552)%
+  --(12.680,10.551)--(12.777,10.550)--(12.810,10.549)--(12.908,10.548)--(12.973,10.546)--(13.005,10.544)%
+  --(13.201,10.543)--(13.396,10.542)--(13.787,10.537)--(13.852,10.535)--(13.917,10.535);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.608,11.075)--(2.608,1.477)--(15.447,1.477)--(15.447,11.075)--cycle;
-\node[gp node center,rotate=-270] at (-0.812,6.276) {Objective value};
-\node[gp node center] at (9.027,0.215) {Relative time ($\tau$) [S]};
-\node[gp node center] at (9.027,11.537) {Objective value for Weekly Schedule};
+\draw[gp path] (2.424,11.075)--(2.424,1.845)--(15.447,1.845)--(15.447,11.075)--cycle;
+\node[gp node center,rotate=-270] at (-0.812,6.460) {Objective value};
+\node[gp node center] at (8.935,0.215) {Relative time ($\tau$) [S]};
+\node[gp node center] at (8.935,11.537) {Objective value for Weekly Schedule};
 %% coordinates of the plot area
-\gpdefrectangularnode{gp plot 1}{\pgfpoint{2.608cm}{1.477cm}}{\pgfpoint{15.447cm}{11.075cm}}
+\gpdefrectangularnode{gp plot 1}{\pgfpoint{2.424cm}{1.845cm}}{\pgfpoint{15.447cm}{11.075cm}}
 \endtikzpicture
 %% gnuplot variables
