--- a/papers/actor-based-large-neighborhood-search/main.tex
+++ b/papers/actor-based-large-neighborhood-search/main.tex
@@ -36,6 +36,7 @@
 \usepackage{gnuplottex}
 \usepackage{gnuplot-lua-tikz}
 
+\renewcommand{\figurename}{Fig}
 
 %% For including figures, graphicx.sty has been loaded in
 %% elsarticle.cls. If you prefer to use the old commands
@@ -73,7 +74,7 @@
 %% for the whole article with \linenumbers.
 %% \usepackage{lineno}
 
-\journal{Computers and Operation Research}
+\journal{Journal of Scheduling}
 
 \begin{document}
 
